--- a/_posts/2020-12-01-1130-1206.md
+++ b/_posts/2020-12-01-1130-1206.md
@@ -1,9 +1,10 @@
 ---
 title: 1130-1206
+category: Java
 tag: TIL
 ---
 
-11/30
+## 11/30
 # 변수의 초기화
  * 변수를 선언하고 처음으로 값을 저장하는 것
 ::멤버변수 (클래스변수와 인스턴스변수)와 배열의 초기화는 선택적이지만, 지경변수의 초기화는 필수적이다.::
@@ -33,4 +34,19 @@ tag: TIL
 클래스변수의 초기화순서 -- 기본값 -> 명시적초기화 -> 클래스 초기화 블럭
 인스턴스변수의 초기화순서 -- 기본값 -> 명시적초기화 -> 인스턴스 초기화 블럭 -> 생성자
 
+---
+## 12/1
+# JVM의 메모리 구조
+1. 메서드 영역 (method area)
+-- 프로그램 실행 중 어떤 클래스가 사용되면, 클래스에 대한 정보를 이곳에 저장한다. 클래스변수도 이 영역에 함께 생성
+2. 힙 (heap)
+-- 인스턴스가 생성되고, 인스턴스변수들이 생성되는 공간
+3. 호출 스택 (call stack)
+-- 메서드의 작업에 필요한 메모리 공간을 제공. 이 메모리는 메서드가 작업을 수행하는 동안 지역변수 (매개변수 포함)들과 연산의 중간결과 등을 저장하는데 사용
+-- 메서드가 작업을 마치면 할당되었던 메모리공간은 반환되어 비워진다.
 
+
+* 메서드가 호출되면 수행에 필요한 만큼의 메모리를 스택에 할당받는다.
+* 메서드가 수행을 마치고나면 사용했던 메모리를 반환하고 스택에서 제거된다.
+* 호출스택의 제일 위에 있는 메서드가 현재 실행 중인 메서드이다.
+* 아래에 있는 메서드가 바로 위의 메서드를 호출한 메서드이다.
