--- a/_posts/2020-12-01-1130-1206.md
+++ b/_posts/2020-12-01-1130-1206.md
@@ -50,3 +50,31 @@ tag: TIL
 * 메서드가 수행을 마치고나면 사용했던 메모리를 반환하고 스택에서 제거된다.
 * 호출스택의 제일 위에 있는 메서드가 현재 실행 중인 메서드이다.
 * 아래에 있는 메서드가 바로 위의 메서드를 호출한 메서드이다.
+
+---
+## 12/2
+# 기본형 매개변수와 참조형 매개변수
+**기본형 매개변수**	변수의 값을 읽기만 할 수 있다.(read only)
+**참조형 매개변수**	변수의 값을 읽고 변경할 수 있다.(read & write)
+
+## 기본형 매개변수
+1. change메서드가 호출되면서 'd.x'가 change메서드의 매개변수 x에 복사됨
+2. change메서드에서 x의 값을 1000으로 변경
+3. change메서드가 종료되면서 매개변수 x는 스택에서 제거됨
+-> 원본이 아니라 복사본이 변경된 것이라 원본에는 아무런 영향을 미치지 못한다.
+    이처럼 기본형 매개변수는 변수에 저장된 값만 읽을 수만 있을 뿐 변경할 수는 없다.
+
+## 참조형 매개변수
+1. change메서드가 호출되면서 참조변수 d의 값(주소)이 매개변수 d에 복사됨
+이제 매개변수 d에 저장된 주소값으로 x에 접근이 가능
+2. change메서드에서 매개변수 d로 x의 값을 1000으로 변경
+3. change메서드가 종료되면서 매개변수 d는 스택에서 제거됨
+->  change메서드의 매개변수를 참조형으로 선언했기 때문에, 주소가 매개변수 d에 복사되었다.
+     그래서 매개변수 d로 x의 값을 읽는 것과 변경하는 것이 모두 가능한 것이다.
+
+## 참조형 반환타입
+1. copy메서드를 호출하면서 참조변수 d의 값이 매개변수 d에 복사된다.
+2. 새로운 객체를 생성한 다음, d.x에 저장된 값을 tmp.x에 복사한다.
+3. copy메서드가 종료되면서 반환한 tmp의 값은 참조변수 d2에 저장된다.
+4. copy메서드가 종료되어 tmp가 사라졌지만, d2로 새로운 객체를 다룰 수 있다.
+-> "반환타입이 '참조형'이라는 것은 메서드가 '객체의 주소'를 반환한다는 것을 의미한다."
