--- a/_posts/2020-12-01-1130-1206.md
+++ b/_posts/2020-12-01-1130-1206.md
@@ -2,6 +2,7 @@
 title: 1130-1206
 category: Java
 tag: TIL
+toc: true
 ---
 
 ## 11/30
@@ -78,3 +79,32 @@ tag: TIL
 3. copy메서드가 종료되면서 반환한 tmp의 값은 참조변수 d2에 저장된다.
 4. copy메서드가 종료되어 tmp가 사라졌지만, d2로 새로운 객체를 다룰 수 있다.
 -> "반환타입이 '참조형'이라는 것은 메서드가 '객체의 주소'를 반환한다는 것을 의미한다."
+
+---
+## 12/3
+# 오버로딩
+**한 클래스 내에 같은 이름의 메서드를 여러 개 정의하는 것**
+
+## 오버로딩의 조건
+1. 메서드의 이름이 같아야 한다.
+2. 매개변수의 개수 또는 타입이 달라야 한다.
+3. 반환 타입은 오버로딩을 구현하는데 아무런 영향을 주지 못한다.
+
+## 오버로딩의 장점
+1. 하나의 이름만 기억하면 되므로 기억하기도 쉽고 이름도 짧게 할 수 있어서 오류의 가능성을 줄인다.
+2. 메서드의 이름을 절약할 수 있다.
+-> 같은 기능을 하는 메서드들이 다른 이름을 가진다면 작성하는 쪽에서나 사용하는 쪽에서나 부담스럽다.
+
+---
+
+## 가변인자와 오버로딩
+**메서드의 매개변수 개수를 동적으로 지정할 수 있는 기능**
+ ::'타입... 변수명'::
+* 가변인자 외에도 매개변수가 더 있다면, 가변인자를 매개변수 중에서 제일 마지막에 선언해야 한다.
+* 가변인자인지 아닌지를 구별할 방법이 없기 때문이다.
+* 가변인자가 선언된 메서드를 호출할 때마다 배열이 새로 생성된다.
+-> 편리하지만, 이러한 비효율이 숨어있으므로 꼭 필요한 경우에만 가변인자를 사용한다.
+* 매개변수의 타입을 배열로 하면, 반드시 인자를 지정해줘야 하기 때문에 인자를 생략할 수 없다.
+-> null이나 길이가 0인 배열을 인자로 지정해줘야 하는 불편함 존재
+* 가변인자를 선언한 메서드를 오버로딩하면, 메서드를 호출했을 때 이와 같이 구별되지 못하는 경우가 발생하기 쉽기 때문에 주의해야 한다.
+-> 가변인자는 가변 길이의 배열을 이용하기 때문에 구분하기에 모호하기 쉽다. 가능하면 가변인자를 사용한 메서드는 오버로딩하지 않는 것이 좋다.
