--- a/_posts/2020-12-08-1207-1213.md
+++ b/_posts/2020-12-08-1207-1213.md
@@ -8,3 +8,13 @@ toc: true
 상속 이전까지의 객체지향 내용과 규칙들을 정리해서 포스팅 하였다.  
 
 # 1208
+---
+웹 프로그래밍 시험 공부  
+* jQuery의 기본 문법을 익히고 동작 원리를 깨달았다.
+```javascript
+<script>  //가장 기본적인 예시
+    $(document).ready(function(){    //문서가 준비되면 콜백 함수 실행
+        $('h1').css('color', 'red'); //h1의 색깔을 빨간색으로 변경
+    });
+</script>
+```
