--- a/_posts/2020-12-08-1207-1213.md
+++ b/_posts/2020-12-08-1207-1213.md
@@ -1,16 +1,17 @@
 ---
 title: "1207-1213"
 tag: TIL
-toc: true
 ---
-# 1207
----
+## 1207
+### 첫 포스팅
 상속 이전까지의 객체지향 내용과 규칙들을 정리해서 포스팅 하였다.  
+첫 포스팅이라 그런지 마크다운 문법을 사용하는 것도 어색했고, 부족한 점이 많은 포스팅이었다.  
+부족한 점을 발견하고 발전시켜 나가며 완성도를 높이려고 한다.  
+늦게 시작한만큼 꾸준하게 학습하여 시간을 잘 활용해야 한다고 생각했다.  
+매일쓰는 TIL과 주간, 월간 피드백을 통해 내가 가는 방향이 정말 맞는 방향인지 되돌아 보는 시간을 가지고자 한다.
 
-# 1208
----
-웹 프로그래밍 시험 공부  
-* jQuery의 기본 문법을 익히고 동작 원리를 깨달았다.
+## 1208
+### 웹 프로그래밍 시험 공부   
 ```javascript
 <script>  //가장 기본적인 예시
     $(document).ready(function(){    //문서가 준비되면 콜백 함수 실행
@@ -18,3 +19,19 @@ toc: true
     });
 </script>
 ```
+* jQuery의 기본 문법을 익히고 동작 원리를 깨달았다. 
+* $기호 뒤에 선택자를 넣고, .기호로 연결하여 html이나 css를 조작하고 이벤트를 연결하는 구조였다.
+* 자바에서 참조변수를 통해 메서드를 작동시키는 것과 비슷한 느낌을 받았다.
+* 단순히 암기 하는 것이 아니라 이해를 하고 문법을 보니 응용 예제도 쉽게 다가왔다.
+
+## 1209
+### 자바 상속
+* **조상 클래스** : 상속해주는 클래스  
+* **자손 클래스** : 상속 받는 클래스  
+    * 자손 클래스는 조상 클래스의 모든 멤버를 상속받는다.  
+    * **코드의 재사용성을 높이고 중복을 제거하여 프로그램 생산성과 유지보수에 크게 기여**
+
+
+
+
+
