--- a/_posts/2020-12-08-1207-1213.md
+++ b/_posts/2020-12-08-1207-1213.md
@@ -31,7 +31,35 @@ tag: TIL
     * 자손 클래스는 조상 클래스의 모든 멤버를 상속받는다.  
     * **코드의 재사용성을 높이고 중복을 제거하여 프로그램 생산성과 유지보수에 크게 기여**
 
+## 1210
+### 포함관계
+* 상속이외에도 클래스를 재사용하는 또 다른 방법이 있는데, 그것은 클래스간에 '포함관계'를 맺어 주는 것  
+* **포함관계** : 한 클래스의 멤버변수로 다른 클래스 타입의 참조변수를 선언하는 것  
+
+### 클래스간의 관계 결정하기
+_포함관계? VS 상속관계?_
+* **상속관계** : ' ~은 ~이다.(is-a) '  
+* **포함관계** : ' ~은 ~을 가지고 있다.(has-a) '  
+* ex) Car클래스와 SportsCar클래스는 'SportsCar는 Car이다.'와 같이 문장을 만드는 것이 더 옳기 때문에 Car을 조상으로 하는 상속관계를 맺어 주어야 한다.
+* ex) Card클래스와 Deck클래스는 'Deck은 Card를 가지고 있다.'와 같이 문장을 만드는 것이 더 옳기 때문에 Deck클래스에 Card클래스를 포함시켜야 한다.
+* 프로그램의 모든 클래스를 분석하여 가능한 많은 관계를 맺도록 노력해서 코드의 재사용성을 높여야 한다.
 
 
+```java
+class Circle {				//원을 표현하기 위한 클래스
+	int x;				//원점 x 좌표
+	int y;				//원점 y 좌표
+	int r;				//반지름
+}
+	
+class Point {				//좌표상의 한 점을 다루기 위한 클래스
+	int x;
+	int y;
+}
+// Circle은 Point를 가지고 있다. -> 포함 관계
 
-
+class Circle {
+	Point c = new Point();
+	int r;
+}
+```
