--- a/_posts/2020-12-08-1207-1213.md
+++ b/_posts/2020-12-08-1207-1213.md
@@ -63,3 +63,17 @@ class Circle {
 	int r;
 }
 ```
+
+## 1211
+### 단일 상속
+* C++에서는 여러 조상 클래스로부터 상속받는 '다중상속'을 허용하지만, 자바에서는 오직 단일 상속만을 허용한다.  
+-> 클래스간의 관계가 매우 복잡해지고, 다른 클래스로부터 상속받은 멤버간의 이름이 같은 경우 구별할 수 있는 방법이 없기 때문
+* 관계가 더 깊은 것을 상속관계로 두고, 나머지 클래스는 포함관계로 하여 다중상속과 비슷한 효과를 낼 수 있다. 
+	* 포함관계에 둔 클래스의 메서드와 일치하는 선언부를 가진 메서드를 선언하고 내용은 포함관계에 둔 클래스의 것을 호출하여 사용  
+	-> 외부적으로는 클래스의 인스턴스를 사용하는 것처럼 보이지만 내부적으로는 포함관계에 둔 클래스의 인스턴스를 생성하여 사용하는 것
+
+### Object클래스 - 모든 클래스의 조상
+*Object클래스는 모든 클래스 상속계층도의 최상위에 있는 조상 클래스*
+* 다른 클래스로부터 상속 받지 않는 모든 클래스들은 자동적으로 Object클래스로부터 상속받게 함으로써 이것을 가능하게 함
+* 컴파일러가 자동적으로 'extends Object'를 추가하여 상속받도록 한다.
+* 그동안 toString()이나 equals(Object o)와 같은 메서드를 따로 정의하지 않고도 사용할 수 있었던 이유는 이 메서드들이 Object클래스에 정의된 것들이기 때문
