--- a/_posts/2020-12-01-[자바의 정석] 6장 객체지향 프로그래밍1.md
+++ b/_posts/2020-12-01-[자바의 정석] 6장 객체지향 프로그래밍1.md
@@ -311,17 +311,17 @@ Car(Car c) {
 * c를 복사하여 생성하므로 서로 같은 상태를 갖지만, 서로 독립적으로 메모리공간에 존재하는 별도의 인스턴스이므로 값들이 변경되어도 영향을 받지 않는다.
 * 무작정 새로 코드를 작성하는 것보다 기존의 코드를 활용할 수 없는지 고민해야한다.
 
-~인스턴스를 생성할 때는 다음의 2가지 사항을 결정해야한다.~
-::1. 클래스 - 어떤 클래스의 인스턴스를 생성할 것인가?::
-::2. 생성자 - 선택한 클래스의 어떤 생성자로 인스턴스를 생성할 것인가?::
+_인스턴스를 생성할 때는 다음의 2가지 사항을 결정해야한다_
+1. 클래스 - 어떤 클래스의 인스턴스를 생성할 것인가?
+2. 생성자 - 선택한 클래스의 어떤 생성자로 인스턴스를 생성할 것인가?
 
 ## 6. 변수의 초기화
 
 ### 6.1 변수의 초기화
  * 변수를 선언하고 처음으로 값을 저장하는 것
- * 가능하면 선언과 동시에 적절한 값으로 초기화 하는 것이 바람직
-::멤버변수(클래스변수와 인스턴스변수)와 배열의 초기화는 선택적이지만, 지역변수의 초기화는 필수적이다.::  
--> 지역변수는 자동적으로 초기화되지 않기 때문에
+ * 가능하면 선언과 동시에 적절한 값으로 초기화 하는 것이 바람직  
+ * 멤버변수(클래스변수와 인스턴스변수)와 배열의 초기화는 선택적이지만, 지역변수의 초기화는 필수적이다.  
+	->  지역변수는 자동적으로 초기화되지 않기 때문에
 
 ### 멤버변수의 초기화 방법
 1. 명시적 초기화
@@ -332,7 +332,7 @@ Car(Car c) {
 * 변수를 선언과 동시에 초기화하여 가장 기본적이면서도 간단한 초기화 방법이므로 가장 우선적으로 고려되어야 한다.
 ```java
 class {
-	int door = 4;					//기본형 변수의 초기화
+	int door = 4;				//기본형 변수의 초기화
 	Engine e = new Engine();		//참조형 변수의 초기화
 }
 ```
