--- a/_posts/2020-12-08-1207-1213.md
+++ b/_posts/2020-12-08-1207-1213.md
@@ -77,3 +77,37 @@ class Circle {
 * 다른 클래스로부터 상속 받지 않는 모든 클래스들은 자동적으로 Object클래스로부터 상속받게 함으로써 이것을 가능하게 함
 * 컴파일러가 자동적으로 'extends Object'를 추가하여 상속받도록 한다.
 * 그동안 toString()이나 equals(Object o)와 같은 메서드를 따로 정의하지 않고도 사용할 수 있었던 이유는 이 메서드들이 Object클래스에 정의된 것들이기 때문
+
+## 1212
+### 오버라이딩
+**정의**:  조상 클래스로부터 상속받은 메서드의 내용을 변경하는 것  
+```java
+class Point {
+	int x;
+	int y;
+
+	String getLocation() {
+		return "x :" + x + "y :" + y;
+	}
+}
+
+class Point3D extends Point {
+	int z;
+	
+	String getLocation() {				//오버라이딩
+		return "x :" + x + "y :" + y + "z :" + z;
+	}
+}
+```
+* Point클래스를 사용하던 사람들은 새로 작성된 Point3D클래스가 getLocation()을 호출하면 Point클래스의 getLocation()이 그랬듯이 점의 좌표를 문자열로 얻을 수 있을 것이라고 기대할 것이다.
+* 그렇기 때문에 새로운 메서드를 제공하는 것보다 오버라이딩을 하는 것이 바른 선택이다.
+
+### 오버라이딩의 조건
+*  자손 클래스에서 오버라이딩하는 메서드는 조상 클래스의 메서드와
+	1. 이름이 같아야 한다.
+	2. 매개 변수가 같아야 한다.
+	3. 반환타입이 같아야 한다.
+* 조상 클래스의 메서드를 자손 클래스에서 오버라이딩 할 때
+	1. 접근 제어자를 조상 클래스의 메서드보다 좁은 범위로 변경할 수 없다.
+	2. 예외는 조상 클래스의 메서드보다 많이 선언할 수 없다.
+	3. 인스턴스메서드를 static메서드로 또는 그 반대로 변경할 수 없다
