--- a/_posts/2020-12-08-1207-1213.md
+++ b/_posts/2020-12-08-1207-1213.md
@@ -112,4 +112,17 @@ class Point3D extends Point {
 	2. 예외는 조상 클래스의 메서드보다 많이 선언할 수 없다.
 	3. 인스턴스메서드를 static메서드로 또는 그 반대로 변경할 수 없다
 
-	
+## 1213
+### super
+*자손 클래스에서 조상 클래스로부터 상속받은 멤버를 참조하는데 사용되는 참조변수*  
+`ex) super.x`  
+* 멤버변수와 지역변수의 이름이 같을 때 this를 붙여서 구별했듯이 상속받은 멤버와 자신의 멤버 이름이 같을 때는 super을 붙여서 구별
+* 모든 인스턴스메서드에는 자신이 속한 인스턴스의 주소가 지역변수로 저장되는데, 이것이 참조변수인 this와 super값이 된다.  
+-> this와 마찬가지로 super 역시 static메서드에서는 사용할 수 없고, 인스턴스메서드에서만 사용 가능
+
+### super() - 조상 클래스의 생성자
+*조상 클래스의 생성자를 호출하는데 사용하는 생성자*
+* 조상 클래스 멤버의 초기화 작업이 수행되어야 하기 때문에 자손 클래스의 생성자에서 조상 클래스의 생성자가 호출되어야 한다.
+* 생성자의 첫 줄에서 조상클래스의 생성자를 호출해야하는 이유
+	* 자손 클래스의 멤버가 조상 클래스의 멤버를 사용할 수도 있으므로 조상의 멤버들이 먼저 초기화 되어 있어야 하기 때문  
+* **Object클래스를 제외한 모든 클래스의 생성자 첫 줄에 생성자, this() 또는 super()를 호출해야 한다. 그렇지 않으면 컴파일러가 자동적으로 'super();'를 생성자의 첫 줄에 삽입한다**
