--- a/_posts/2020-12-14-1214-1220.md
+++ b/_posts/2020-12-14-1214-1220.md
@@ -19,3 +19,13 @@ tag: TIL
 플래시를 동작시키면서 패킷을 분석하여 정보를 얻어내고, 보기 좋게 워드 파일로 정리하여 HTML5로 변환하는 데에 사용할 수 있도록 하는 것이다.  
 이전에도 와이어 샤크라는 애플리케이션을 이용하여 패킷을 분석해 본 경험은 있지만 오래 되기도 했고, 더군다나 좋은 정보라는 것이 무엇인지 감이 잡히지를 않았다.  
 이번 과제를 진행하면서 http 프로토콜의 통신 방식에 대해 다시 한 번 되짚고, 패킷으로부터 정보를 얻는 과정을 수행하며 좋은 경험을 하게 될 것이라는 생각이 들었다.
+
+## 1215
+### Request & Response
+* 와이어샤크에 Ip를 설정하고 프로그램을 동작시켜보면 수 많은 패킷들이 이동하는 것을 볼 수 있다.
+* 내가 얻고자 한 정보들은 주로 GET과 POST 메서드로 호출한 url안에 들어있었다.
+* GET메서드의 경우에는 url안에 data가 '&'기호로 연결되어 들어있었다.
+* POST메서드의 경우에는 해당 패킷을 우클릭한 뒤, tcp stream을 클릭하면 하단에 보낸 data가 적혀있었다.
+* 응답으로는 주로 정상적으로 주고 받았다는 200 신호가 나타나는데, XML파일이 반환되는 경우에는 그 역시 중요한 정보가 되었다.
+*똑같은 프로그램을 작동시켜서 패킷의 흐름을 확인하는데 정보가 나오지 않는다면?*  
+-> **캐시에 정보가 저장되어 정상적으로 작동되지 않을 수도 있다. 해당 브라우저의 캐시내역을 삭제해보자**
