--- a/_posts/2020-12-14-1214-1220.md
+++ b/_posts/2020-12-14-1214-1220.md
@@ -26,6 +26,8 @@ tag: TIL
 * 내가 얻고자 한 정보들은 주로 GET과 POST 메서드로 호출한 url안에 들어있었다.
 * GET메서드의 경우에는 url안에 data가 '&'기호로 연결되어 들어있었다.
 * POST메서드의 경우에는 해당 패킷을 우클릭한 뒤, tcp stream을 클릭하면 하단에 보낸 data가 적혀있었다.
-* 응답으로는 주로 정상적으로 주고 받았다는 200 신호가 나타나는데, XML파일이 반환되는 경우에는 그 역시 중요한 정보가 되었다.
+* 응답으로는 주로 정상적으로 주고 받았다는 200 신호가 나타났다. XML파일이 반환되는 경우에는 그 역시 중요한 정보가 되었다.  
+
+
 *똑같은 프로그램을 작동시켜서 패킷의 흐름을 확인하는데 정보가 나오지 않는다면?*  
--> **캐시에 정보가 저장되어 정상적으로 작동되지 않을 수도 있다. 해당 브라우저의 캐시내역을 삭제해보자**
+-> **캐시에 정보가 저장되어 추가적으로 요청할 필요가 없어서 정보들이 나오지 않을 수 있다. 해당 브라우저의 캐시내역을 삭제해보자**
