--- a/_posts/2020-12-14-1214-1220.md
+++ b/_posts/2020-12-14-1214-1220.md
@@ -31,3 +31,14 @@ tag: TIL
 
 *똑같은 프로그램을 작동시켜서 패킷의 흐름을 확인하는데 정보가 나오지 않는다면?*  
 -> **캐시에 정보가 저장되어 추가적으로 요청할 필요가 없어서 정보들이 나오지 않을 수 있다. 해당 브라우저의 캐시내역을 삭제해보자**
+
+## 1216
+인턴을 2일 남기고 학교에 제출해야 할 서류가 있어서 상사로부터 근무자 평가서를 받게 되었다.  
+그리고 그에 대한 피드백을 받았는데 피드백과 내 생각을 요약한 내용은 다음과 같다.  
+* 근무태도 및 인간 관계 우수
+* 업무를 진행하는 속도가 느리지만, 그만큼 정확도는 높은 편이다.  
+    * 다르게 말하면 일처리는 꼼꼼하지만 속도가 느리다.  
+* 전반적으로 좋은 평이 많았는데, 일부는 좋게 돌려서 말씀해주신 것 같았다.  
+* 마지막에 들은 '이 정도만 하면 어디를 가서도 너랑 같이 일 못하겠다고 말하는 사람은 없을거야'라는 말이 상당히 기분 좋게 다가왔다.
+    * 첫 실무 경험이라 부족하게 느껴지지는 않았을까 걱정을 한 것에 비해 좋은 평가를 받은 것 같다.
+    * 더 발전하여 모두가 함께 일하고 싶어하는 사람이 되야겠다는 생각을 들게 했다.  
