--- a/_posts/2020-12-14-1214-1220.md
+++ b/_posts/2020-12-14-1214-1220.md
@@ -42,3 +42,27 @@ tag: TIL
 * 마지막에 들은 '이 정도만 하면 어디를 가서도 너랑 같이 일 못하겠다고 말하는 사람은 없을거야'라는 말이 상당히 기분 좋게 다가왔다.
     * 첫 실무 경험이라 부족하게 느껴지지는 않았을까 걱정을 한 것에 비해 좋은 평가를 받은 것 같다.
     * 더 발전하여 모두가 함께 일하고 싶어하는 사람이 되야겠다는 생각을 들게 했다.  
+
+## 1217
+### 생성자의 접근 제어자 - **Singleton**
+* 생성자에 접근 제어자를 사용함으로써 인스턴스의 생성을 제한할 수 있다.
+* 생성자의 접근 제어자를 private으로 지정하면, 외부에서 생성자에 접근할 수 없으므로 인스턴스를 생성할 수 없게 된다.
+* 대신 인스턴스를 생성해서 반환해주는 public 메서드를 제공함으로써 외부에서 이 클래스의 인스턴스를 사용할수 있도록 할 수 있다.
+* 이 메서드는 public인 동시에 static이어야 한다.
+```java
+class Singleton {
+	private static Singleton s = new Singleton();	//getInstance()에서 사용될 수 있도록 인스턴스가
+                                                    미리 생성되야 하므로 static이어야 함
+	private Singleton() {
+		
+	}
+
+	public static Singleton getInstance() { 	//인스턴스를 생성하지 않고도 호출할 수 있어야 하므로 static이어야 함
+		return s;		
+	}
+}
+```
+	* 	이처럼 생성자를 통해 직접 인스턴스를  생성하지 못하게 하고 public메서드를 통해 인스턴스에 접근하게 함으로써 사용할 수 있는 인스턴스의 개수를 제한할 수 있다.
+* 생성자가 private인 클래스는 다른 클래스의 조상이 될 수 없다.
+	* 자손 클래스가 인스턴스를 생성할 때, 조상클래스의 생성자를 호출해야만 하는데, 생성자의 접근 제어자가 private이므로 자손클래스에서 호출하는 것이 불가능 하기 때문
+	* 클래스 앞에 final을 더 추가하여 상속할 수 없는 클래스라는 것을 알리는 것이 좋다.
