--- a/_posts/2020-12-14-1214-1220.md
+++ b/_posts/2020-12-14-1214-1220.md
@@ -62,7 +62,20 @@ class Singleton {
 	}
 }
 ```
-	* 	이처럼 생성자를 통해 직접 인스턴스를  생성하지 못하게 하고 public메서드를 통해 인스턴스에 접근하게 함으로써 사용할 수 있는 인스턴스의 개수를 제한할 수 있다.
+	* 이처럼 생성자를 통해 직접 인스턴스를 생성하지 못하게 하고 public메서드를 통해 인스턴스에 접근하게 함으로써 사용할 수 있는 인스턴스의 개수를 제한할 수 있다.
 * 생성자가 private인 클래스는 다른 클래스의 조상이 될 수 없다.
 	* 자손 클래스가 인스턴스를 생성할 때, 조상클래스의 생성자를 호출해야만 하는데, 생성자의 접근 제어자가 private이므로 자손클래스에서 호출하는 것이 불가능 하기 때문
 	* 클래스 앞에 final을 더 추가하여 상속할 수 없는 클래스라는 것을 알리는 것이 좋다.
+
+## 1218
+### static import문
+* static import 문을 사용하면 static멤버를 호출할 때 클래스 이름을 생략할 수 있다.
+* 특정 클래스의 static멤버를 자주 사용할 때 편리하다.
+```java
+import static java.lang.Integer.*;		//Integer클래스의 모든 static메서드
+import static java.lang.Math.random;	//Math.random()만. 괄호 안붙임.
+import static java.lang.System.out;		//System.out을 out만으로 참조가능
+```
+	* 위와 같이 static import문을 선언하였다면,  
+`System.out.println(Math.random());` 을  
+`out.println(random());`으로 간략히 할  수 있다.
