--- a/_posts/2020-12-14-1214-1220.md
+++ b/_posts/2020-12-14-1214-1220.md
@@ -72,10 +72,26 @@ class Singleton {
 * static import 문을 사용하면 static멤버를 호출할 때 클래스 이름을 생략할 수 있다.
 * 특정 클래스의 static멤버를 자주 사용할 때 편리하다.
 ```java
-import static java.lang.Integer.*;		//Integer클래스의 모든 static메서드
+import static java.lang.Integer.*;	//Integer클래스의 모든 static메서드
 import static java.lang.Math.random;	//Math.random()만. 괄호 안붙임.
-import static java.lang.System.out;		//System.out을 out만으로 참조가능
+import static java.lang.System.out;	//System.out을 out만으로 참조가능
 ```
 	* 위와 같이 static import문을 선언하였다면,  
 `System.out.println(Math.random());` 을  
-`out.println(random());`으로 간략히 할  수 있다.
+`out.println(random());`으로 간략히 할 수 있다.
+
+## 1219
+### 패키지(package)
+**패키지란, 클래스들의 묶음**
+* 클래스의 실제 이름(full name)은 패키지명을 포함한 것
+ex) String클래스의 실제 이름은 java.lang.String
+* 클래스가 물리적으로 하나의 클래스파일(.class)인 것과 같이 패키지는 물리적으로 하나의 디렉토리
+* 하나의 소스파일에는 첫 번째 문장으로 단 한 번의 패키지 선언만을 허용
+* 모든 클래스는 반드시 하나의 패키지로 속해야 한다.
+* 패키지는 점(.)을 구분자로 하여 계층구조로 구성할 수 있다.
+* 패키지는 물리적으로 클래스 파일(.class)을 포함하는 하나의 디렉토리
+
+### 패키지의 선언
+`package 패키지명;`
+* 해당 소스파일에 포함된 모든 클래스나 인터페이스는 선언된 패키지에 속하게 된다.
+* 소스파일에 자신이 속할 패키지를 지정하지 않은 클래스는 자동적으로 '이름 없는 패키지'에 속하게 된다.
