--- a/_posts/2020-12-14-1214-1220.md
+++ b/_posts/2020-12-14-1214-1220.md
@@ -95,3 +95,67 @@ ex) String클래스의 실제 이름은 java.lang.String
 `package 패키지명;`
 * 해당 소스파일에 포함된 모든 클래스나 인터페이스는 선언된 패키지에 속하게 된다.
 * 소스파일에 자신이 속할 패키지를 지정하지 않은 클래스는 자동적으로 '이름 없는 패키지'에 속하게 된다.
+
+## 1220
+### 다형성이란?
+**객체지향**에서는 '여러 가지 형태를 가질 수 있는 능력'  
+**자바**에서는 조상클래스 타입의 참조변수로 자손 클래스의 인스턴스를 참조할 수 있도록 함  
+
+
+ex) Tv와 CaptionTv클래스가 서로 상속 관계일 때,  
+
+
+ `Tv t = new CationTv();`
+* 	실제 인스턴스가 CaptionTv 타입이라 할지라도, 참조 변수 t로는 CaptionTv 인스턴스의 모든 멤버를 사용할 수 없다.
+* Tv타입의 참조변수로는 CaptionTv 인스턴스 중에서 Tv 클래스의 멤버들만 사용할 수 있다.
+* **같은 타입의 인스턴스라도 참조변수의 타입에 따라 사용할 수 있는 멤버의 개수가 달라진다.**
+
+*반대로 자손타입의 참조변수로 조상타입의 인스턴스를 참조하는 것은 가능할까?*  
+
+
+`CaptionTv c = new Tv();   //컴파일 에러`
+* 실제 인스턴스인 Tv의 멤버 개수보다 참조변수 c가 사용할 수 있는 멤버 개수가 더 많기 때문
+* 자손타입의 참조변수로 조상타입의  인스턴스를 참조하는 것은 존재하지 않는 멤버를 사용하고자 할 가능성이 있으므로 허용하지 않음
+* **참조변수가 사용할 수 있는 멤버의 개수는 인스턴스의 멤버 개수보다 같거나 적어야 한다.**
+
+> **조상타입의 참조변수로 자손타입의 인스턴스를 참조할 수 있다**  
+> **반대로 자손타입의 참조변수로 조상타입의 인스턴스를 참조할 수는 없다**
+
+### 참조변수의 형변환
+* 서로 상속관계에 있는 클래스사이에서는 참조변수도 형변환이 가능하다.
+* 자손타입의 참조변수를 조상타입의 참조변수로, 조상타입의 참조변수를 자손타입의 참조변수로의 형변환만 가능  
+
+
+**자손타입 -> 조상타입(Up-casting) : 형변환 생략가능**  
+**조상타입 -> 자손타입(Down-casting) : 형변환 생략불가**  
+* 자손타입의 참조변수를 조상타입의 참조변수로 형변환 하는 것은 참조변수가 다룰 수 있는 멤버의 개수가 실제 인스턴스가 갖고 있는 멤버의 개수보다 적을 것이 분명하므로 문제가 되지 않는다. 그래서 형변환을 생략할 수 있다.
+* 형변환은 참조변수의 타입을 변환하는 것이지 인스턴스를 변환하는 것은 아니기 때문에 참조변수의 형변환은 인스턴스에 아무런 영향을 미치지 않는다.
+단지 참조변수의 형변환을 통해서, 참조하고 있는 인스턴스에서 사용할 수 있는 멤버의 범위(개수)를 조절하는 것뿐이다. 
+
+```java
+public class CastingTest {
+    public static void main(String[] args) {
+        Car car = new Car();
+        Car car2 = null;
+        FireEngine fe = null;
+
+        car.drive();
+        fe = (FireEngine) car;		//컴파일은 OK. 실행 시 에러가 발생
+        fe.drive();
+	car2 = fe;
+	car2.drive();
+    }
+}
+```
+
+
+* 참조변수 car가 참조하고 있는 인스턴스가 Car타입의 인스턴스이기 때문에 조상 타입의 인스턴스를 자손타입의 참조변수로 참조하는 것은 허용되지 않는다.
+* 컴파일 시에는 참조변수간의 타입만 체크하기 때문에 실행 시 생성될 인스턴스의 타입에 대해서는 전혀 알지 못한다.
+* 서로 상속관계에 있는 타입간의 형변환은 양방향으로 자유롭게 수행될 수 있으나, 참조변수가 가리키는 인스턴스의 자손타입으로 형변환은 허용되지 않는다.
+* 그래서 **참조변수가 가리키는 인스턴스의 타입이 무엇인지 확인하는 것**은 중요하다.
+
+### instance 연산자
+* 참조변수가 참조하고 있는 인스턴스의 실제 타입을 알아보기 위해 instanceof 연산자를 사용한다.
+* 왼쪽에는 참조변수를 오른쪽에는 타입(클래스명)이 피연산자로 위치한다.
+* 실제 인스턴스와 같은 타입의 instanceof연산 이외에 조상타입의 instanceof연산에도 true를 결과로 얻는다.
+* **어떤 타입에 대한 instanceof연산의 결과가 true라는 것은 검사한 타입으로 형변환이 가능하다는 것을 뜻한다**
