--- a/_posts/2020-12-08-1207-1213.md
+++ b/_posts/2020-12-08-1207-1213.md
@@ -1,9 +1,13 @@
 ---
 title: "1207-1213"
 tag: TIL
+category: TIL
 ---
 ## 1207
 ### 첫 포스팅
+
+
+
 상속 이전까지의 객체지향 내용과 규칙들을 정리해서 포스팅 하였다.  
 첫 포스팅이라 그런지 마크다운 문법을 사용하는 것도 어색했고, 부족한 점이 많은 포스팅이었다.  
 부족한 점을 발견하고 발전시켜 나가며 완성도를 높이려고 한다.  
