--- a/_posts/2020-12-21-1221-1227.md
+++ b/_posts/2020-12-21-1221-1227.md
@@ -25,3 +25,102 @@ ex) Tv와 CaptionTv클래스가 서로 상속 관계일 때,
 
 >**조상타입의 참조변수로 자손타입의 인스턴스를 참조할 수 있다**  
 >**반대로 자손타입의 참조변수로 조상타입의 인스턴스를 참조할 수는 없다**
+
+## 1222
+# 인터넷 네트워크
+http메서드를 학습하기 전에 기본적으로 짚고 넘어가야 할 인터넷 네트워크에 대한 지식들을 정리해보았다.
+
+ 
+## 인터넷 통신          
+*인터넷에서 컴퓨터 둘은 어떻게 통신할까?*  
+* 클라이언트와 서버가 통신하기 위해 여러 노드를 타고 데이터가 이동한다.
+* 그러기 위한 가장 기본적인 통신 규약이 IP이다.
+
+
+
+## IP(인터넷 프로토콜)
+* 클라이언트와 서버가 통신하기 위해서는 기본적으로 IP주소가 있어야 한다.
+Ex) 100.100.100.1
+
+### IP 역할
+1. 지정한 IP 주소(IP Address)에 데이터 전달
+2. 패킷(Packet)이라는 통신 단위로 데이터 전달
+
+### IP 패킷 정보
+출발지 IP,  목적지 IP, 기타...
+
+### IP프로토콜의 한계
+1. 비연결성  
+-> 패킷을 받을 대상이 없거나 서비스 불능 상태여도 패킷 전송
+2. 비신뢰성  
+-> 중간에 패킷이 사라지거나, 순서대로 오지 않는 것을 보장하지 않음
+3. 프로그램 구분    
+-> 같은 IP를 사용하는 서버에서 통신하는 애플리케이션이 둘 이상이면 구분하지 못함
+
+
+## TCP  UDP
+### 인터넷 프로토콜 스택의 4계층
+* 애플리케이션 계층 - HTTP, FTP
+* 전송 계층 - TCP, UDP
+* 인터넷 계층 - IP
+* 네트워크 인터페이스 계층
+
+### TCP/IP 패킷 정보
+* TCP - 출발지 PORT, 목적지 PORT, 전송 제어, 순서, 검증 정보...
+* IP -  출발지 IP, 목적지 IP, 기타...   
+    * **이러한 정보들을 가지고 IP프로토콜에서의 문제들을 해결한다**
+
+### TCP 특징
+전송 제어 프로토콜(Transmission Control Protocal)
+1. 연결 지향 - TCP 3 way handshake (가상연결)
+2. 데이터 전달 보증
+3. 순서 보장  
+-> 신뢰할 수 있는 프로토콜
+
+### TCP 3 way handshake
+1. 클라이언트 -> 서버 - SYN
+2. 서버 -> 클라이언트 - SYN+ACK
+3. 클라이언트 -> 서버 - ACK
+4. 데이터 전송  
+**물리적으로 연결이 된 것이 아니라, 논리적으로 연결이 된 것이다.**
+
+
+*SYN: 접속 요청*  
+*ACK: 요청 수락*   
+*3.에서 ACK와 함께 데이터 전송 가능*  
+
+### UDP 특징
+사용자 데이터그램 프로토콜(User Datagram Protocol)
+* 기능이 거의 없음
+* 연결 지향, 데이터 전달 보증, 순서 보장 모두 X
+* 데이터 전달 및 순서가 보장되지 않지만, 단순하고 빠름
+* IP와 거의 같다. + PORT + 체크섬(메시지에 대해 제대로 받는지 검증) 정도만 추가
+* 애플리케이션에서 추가 작업 필요
+
+
+## PORT
+*서버 안에서 돌아가는 애플리케이션을 찾는 것*  
+
+
+**같은 IP 내에서 프로세스를 구분**  
+ex) 한 컴퓨터에서 게임, 화상통화, 웹 브라우저를 동시에 사용할 때 각각 포트번호를 다르게 해서 통신이 원활하게 한다.
+* 0 ~ 65535 할당 가능
+* 0 ~ 1023은 잘 알려진 포트, 사용하지 않는 것이 좋음
+
+## DNS
+### IP주소의 문제점
+1. IP 주소는 기억하기 어렵다.
+2. IP 주소는 변경될 수 있다.
+
+### DNS
+도메인 네임 시스템(Domain Name System)
+* 도메인 명을 IP 주소로 변환  
+-> 전화번호부와 같은 역할
+
+### DNS 사용
+1. 도메인 명을 url에 작성한다.
+2. DNS 서버에서 도메인 명을 IP 주소로 변환하여 응답해준다.
+3. 받은 IP 주소로 서버에 접속한다.  
+
+
+**-> 2가지 문제점을 동시에 해결**
