--- a/_posts/2020-12-21-1221-1227.md
+++ b/_posts/2020-12-21-1221-1227.md
@@ -227,3 +227,78 @@ public class CastingTest {
 * 왼쪽에는 참조변수를 오른쪽에는 타입(클래스명)이 피연산자로 위치한다.
 * 실제 인스턴스와 같은 타입의 instanceof연산 이외에 조상타입의 instanceof연산에도 true를 결과로 얻는다.
 * **어떤 타입에 대한 instanceof연산의 결과가 true라는 것은 검사한 타입으로 형변환이 가능하다는 것을 뜻한다**
+
+## 1225
+# 추상 클래스(abstract class)
+## 추상클래스란?
+*미완성 설계도*  
+-> 클래스가 미완성이라는 것은 멤버의 개수에 관계된 것이 아니라, 단지 미완성 메서드(추상메서드)를 포함하고 있다는 의미
+
+* 상속을 통해서 자손클래스에 의해서만 완성될 수 있다.
+* 자체로는 클래스로서의 역할을 다 못하지만, 새로운 클래스를 작성하는데 있어서 바탕이 되는 조상클래스로서 중요한 의미를 갖는다.
+* 키워드 'abstract'를 붙이기만 하면 된다.
+	* 이렇게 함으로써 클래스 선언부를 보고 이 클래스에는 추상메서드가 있으니 상속을 통해서 구현해주어야 한다는 것을 알 수 있다.
+```java
+abstract class 클래스이름 {
+	...
+}
+```
+* 추상클래스는 추상메서드를 포함하고 있다는 것을 제외하고는 일반클래스와 전혀 다르지 않다.
+
+> 추상메서드를 포함하고 있지 않은 클래스에도 미워드 'abstract'를 붙여서 추상클래스로 지정할 수도 있다.  
+> 추상메서드가 없는 완성된 클래스라 할지라도 추상클래스로 지정되면 클래스의 인스턴스를 생성할 수 없다.
+
+## 추상메서드(abstract method)
+*선언부만 작성하고 구현부는 작성하지 않은 채로 남겨 둔 메서드*  
+-> 설계만 해 놓고 실제 수행될 내용은 작성하지 않았기 때문에 미완성 메서드
+
+* 메서드의 내용이 상속받는 클래스에 따라 달라질 수 있기 때문에 조상 클래스에서는 선언부만 작성하고, 실제 내용은 상속받는 클래스에서 구현하도록 비워 두는 것
+* 추상메서드 역시 키워드 'abstract'를 앞에 붙여 주고, 구현부가 없으므로 괄호{} 대신 문장의 끝을 알리는 ';'을 적어준다.
+```java
+/* 주석을 통해 어떤 기능을 수행할 목적으로 작성하였는지 설명한다. */
+abstract 리턴타입 메서드이름();
+```
+* 추상클래스를 상속받는 자손클래스는 오버라이딩을 통해 추상메서드를 모두 구현해주어야 한다.
+* 하나라도 구현하지 않는다면, 자손클래스 역시 추상클래스로 지정해 주어야 한다.
+* 추상메서드 대신, 아무 내용도 없는 메서드로 작성할 수도 있다.
+* 그래도 굳이 추상메서드로 선언하는 이유는 자손 클래스에서 추상메서드를 반드시 구현하도록 강요하기 위해서이다.
+
+## 추상클래스의 작성
+**추상화** : 클래스간의 공통점을 찾아내서 공통의 조상을 만드는 작업   
+**구체화** : 상속을 통해 클래스를 구현, 확장하는 작업
+* 상속계층도를 따라 내려갈수록 클래스는 점점 기능이 추가되어 구체화의 정도가 심해지며, 올라갈수록 추상화의 정도는 심해진다고 할 수 있다.
+
+```java
+abstract class Unit {					//추상클래스
+	int x, y;
+	abstract void move (int x, int y);
+	void stop() {}
+}
+
+class Marine extends Unit {
+	void move (int x, int y) { //추상메서드 구현 }
+	void stimPack() {}
+}
+
+class Tank extends Unit {
+	void move (int x, int y) { //추상메서드 구현 }
+	void changeMode() {}
+}
+```
+* 클래스들의 공통부분을 뽑아내서 Unit클래스를 정의하고 이로부터 상속받도록 하였다.
+* move메서드의 선언부는 같지만 이동하는 방법이 서로 달라서 추상메서드로 정의한다.
+* 최대한의 공통부분을 뽑아내기 위한 것이기도 하지만, 모든 유닛은 이동할 수 있어야 하므로 Unit클래스에는 move메서드가 반드시 필요한 것이기 때문
+* stop메서드는 모두 공통적이지만, move메서드가 추상메서드로 선언된 것에는, Unit클래스를 상속받아서 작성되는 클래스는 move메서드를 자신의 클래스에 알맞게 반드시 구현해야 한다는 의미가 담겨있는 것이기도 하다.
+
+```java
+Unit[] group = new Unit[2];
+group[0] = new Marine();
+group[1] = new Tank();
+
+for(int i=0; i<group.length; i++) 
+	group[i].move(100, 200);
+```
+* 공통조상인 Unit클래스 타입의 참조변수 배열을 통해서 서로 다른 종류의 인스턴스를 하나의 묶음으로 다룰 수 있다.
+* 메서드는 참조변수의 타입에 관계없이 실제 인스턴스에 구현된 것이 호출되기 때문에 Unit클래스 타입의 참조변수로 move메서드 호출이 가능하다.
+* 모든 클래스의 조상인 Object클래스 타입의 배열로도 서로 다른 종류의 인스턴스를 묶어서 다룰 수 있지만, move메서드가 정의되어 있지 않기 때문에 호출하는 부분에서 에러가 발생한다.  
+-> **참조변수는 리모콘 역할**
