--- a/_posts/2020-12-21-1221-1227.md
+++ b/_posts/2020-12-21-1221-1227.md
@@ -302,3 +302,72 @@ for(int i=0; i<group.length; i++)
 * 메서드는 참조변수의 타입에 관계없이 실제 인스턴스에 구현된 것이 호출되기 때문에 Unit클래스 타입의 참조변수로 move메서드 호출이 가능하다.
 * 모든 클래스의 조상인 Object클래스 타입의 배열로도 서로 다른 종류의 인스턴스를 묶어서 다룰 수 있지만, move메서드가 정의되어 있지 않기 때문에 호출하는 부분에서 에러가 발생한다.  
 -> **참조변수는 리모콘 역할**
+
+## 1226
+# 인터페이스(interface)
+## 인터페이스란?
+*추상 메서드의 집합*
+* 추상클래스보다 추상화 정도가 높아서 추상클래스와 달리 몸통을 갖춘 일반 메서드 또는 멤버변수를 구성원으로 가질 수 없다.  
+* 오직 추상메서드와 상수만을 멤버로 가질수 있다.    
+-> 다른 클래스를 작성하는데 도움 줄 목적으로 작성
+
+### 추상클래스 vs 인터페이스
+추상클래스를 부분적으로 완성된 '미완성 설계도'라고 한다면, 인터페이스는 구현된 것은 아무 것도 없고 밑그림만 그려져 있는 '기본 설계도'라 할 수 있다.
+
+## 인터페이스의 작성
+```java
+interface 인터페이스이름 {
+	public static final 타입 상수이름 = 값;
+	public abstract 메서드이름(매개변수목록);
+}
+```
+*일반적인 클래스의 멤버들과 달리 인터페이스의 멤버들은 다음과 같은 제약사항이 있다*
+* 모든 멤버변수는 public static final 이어야 하며, 이를 생략할 수 있다.
+* 모든 메서드는 public abstract 이어야 하며, 이를 생략할 수 있다.
+* 단, static메서드와 디폴트 메서드는 예외(JDK 1.8부터)  
+-> 모든 멤버에 예외없이 적용되는 사항이기 때문에 생략할 수 있는 것이며, 편의상 생략하는 경우가 많다.
+
+## 인터페이스의 상속
+* 인터페이스는 인터페이스로부터만 상속받을 수 있으며, 클래스와는 다르게 다중상속이 가능하다.
+* 클래스의 상속과 마찬가지로 자손 인터페이스는 조상 인터페이스에 정의된 멤버를 모두 상속받는다.
+
+> 인터페이스는 클래스와 달리 Object클래스와 같은 최고 조상이 없다.
+
+## 인터페이스의 구현
+* 인터페이스도 추상클래스처럼 그 자체로는 인스턴스를 생성할 수 없으며, 자신에 정의된 초상메서드의 몸통을 만들어주는 클래스를 작성해야 한다.
+* 단, 인터페이스는 구현한다는 의미의 키워드 'implements'를 사용한다.
+* 구현하는 인터페이스의 메서드 중 일부만 구현한다면, abstract를 붙여서 추상클래스로 선언해야 한다.
+* 상속과 구현을 동시에 할 수도 있다.
+
+> 인터페이스의 이름에는 주로 Fightable과 같이 '~을 할 수 있는'의 의미인 'able'로 끝나는 것들이 많은데, 그 이유는 어떠한 기능 또는 행위를 하는데 필요한 메서드를 제공한다는 의미를 각종하기 위해서이다.
+
+* 인터페이스를 구현한 클래스는 인터페이스로부터 상속받은 추상 메서드를 구현하기 때문에 인터페이스도 조금은 다른 의미의 조상이라고 할 수 있다.
+* 인터페이스에서 'public abstract'가 생략되어 있는 경우가 많은데, 오버라이딩 할 때는 조상의 메서드보다 넓은 범위의 접근 제어자를 지정해야 하므로 이를 구현하는 클래스에서는 구현하는 메서드의 접근 제어자를 반드시 public으로 해야 한다. 
+
+## 인터페이스를 이용한 다중상속
+* 두 조상으로부터 상속받는 멤버 중에서 멤버변수의 이름이 같거나 메서드의 선언부가 일치하고 구현 내용이 다르다면 자손 클래스는 어느 조상의 것을 상속받게 되는 것인지 알 수 없다.
+* 자바에서는 단점이 더 크다고 판단하였기에 다중상속을 허용하지 않는다.
+* 인터페이스는 static상수만 정의할 수 있어서 조상클래스의 멤버변수와 충돌하는 경우가 거의 없고 충돌된다 하더라도 클래스 이름을 붙여서 구분이 가능하다.
+* 그리고 추상메서드는 구현내용이 전혀 없으므로 조상클래스의 메서드와 선언부가 일치하는 경우에는 조상클래스 쪽의 메서드를 상속받으면 된다.
+* 그러나 이렇게 하면 상속받는 멤버의 충돌은 피할 수 있지만, 다중상속의 장점을 잃게 된다.
+* **만일 두 개의 클래스로부터 상속을 받아야 할 상황이라면, 두 조상클래스중 비중이 높은 쪽을 선택하고 다른 한쪽은 클래스 내부에 멤버로 포함시키는 방식을 사용하거나 어느 한쪽의 필요한 부분을 뽑아서 인터페이스로 만든 다음 구현하도록 한다**
+
+## 인터페이스를 이용한 다형성
+*인터페이스 역시 클래스의 조상이라고 할 수 있으므로 해당 인터페이스 타입의 참조변수로 이를 구현한 클래스의 인스턴스를 참조할 수 있고, 인터페이스 타입으로 형변환도 가능하다.*
+
+* 따라  인터페이스는 다음과 같이 메서드의 매개변수 타입으로 사용 될 수 있다.
+```java
+void attack(Fightable f){
+	//...
+}
+```
+* 인터페이스 타입의 매개변수가 갖는 의미는 메서드 호출 시 해당 인터페이스를 구현한 클래스의 인스턴스를 매개변수로 제공해야한다는 것
+* 예를 들어, attack메서드를 호출할 때는 매개변수로 Fightable 인터페이스를 구현한 클래스의 인스턴스를 넘겨주어야 한다.
+* 메서드의 리턴타입으로 인터페이스의 타입을 지정하는 것 역시 가능하다.
+```java
+Fightable method() {
+	Fighter f = new Fighter();
+	return f;
+}
+```
+* **리턴 타입이 인터페이스라는 것은 메서드가 해당 인터페이스를 구현한 클래스의 인스턴스를 반환한다는 것을 의미한다.**
