--- a/_posts/2020-12-26-[자바의 정석] 7장 객체지향 프로그래밍2.md
+++ b/_posts/2020-12-26-[자바의 정석] 7장 객체지향 프로그래밍2.md
@@ -533,7 +533,7 @@ for(int i=0; i<group.length; i++)
 *추상 메서드의 집합*
 * 추상클래스보다 추상화 정도가 높아서 추상클래스와 달리 몸통을 갖춘 일반 메서드 또는 멤버변수를 구성원으로 가질 수 없다.  
 * 오직 추상메서드와 상수만을 멤버로 가질수 있다.    
--> 다른 클래스를 작성하는데 도움 줄 목적으롤 작성
+-> 다른 클래스를 작성하는데 도움 줄 목적으로 작성
 
 #### 추상클래스 vs 인터페이스
 추상클래스를 부분적으로 완성된 '미완성 설계도'라고 한다면, 인터페이스는 구현된 것은 아무 것도 없고 밑그림만 그려져 있는 '기본 설계도'라 할 수 있다.
