--- a/_posts/2020-12-21-1221-1227.md
+++ b/_posts/2020-12-21-1221-1227.md
@@ -371,3 +371,88 @@ Fightable method() {
 }
 ```
 * **리턴 타입이 인터페이스라는 것은 메서드가 해당 인터페이스를 구현한 클래스의 인스턴스를 반환한다는 것을 의미한다.**
+
+## 1227
+# 내부클래스
+## 내부 클래스란?
+*클래스 내에 선언된 클래스*
+
+**내부클래스의 장점**
+1. 내부 클래스에서 외부 클래스의 멤버들을 쉽게 접근할 수 있다.
+2. 코드의 복잡성을 줄일 수 있다(캡슐화).
+
+```java
+class A {		//외부클래스
+	class B {	//내부클래스
+
+	}
+}
+```
+* 이 때 내부클래스인 B는 A를 제외하고는 잘 사용되지 않는 것이어야 한다.
+
+## 내부클래스의 종류와 특징
+* 내부 클래스의 종류는 변수의 선언위치에 따른 종류와 같다.
+* 변수를 선언하는 것과 같은 위치에 선언할 수 있으며, 선언 위치에 따라 인스턴스 내부클래스, 스태틱 내부클래스, 지역 내부클래스로 나뉜다.
+* 각 내부 클래스의 선언위치에 따라 같은 선언위치의 변수와 동일한 유효범위와 접근성을 갖는다.
+
+## 내부 클래스의 제어자와 접근성
+* 내부 클래스가 외부 클래스의 멤버와 같이 간주되고, 인스턴스멤버와 static멤버 간의 규칙이 내부 클래스에도 똑같이 적용
+* 내부클래스도 클래스이기 때문에 abstract나 final과 같은 제어자를 사용할 수 있을 뿐만 아니라, 멤버변수들처럼 private, protected과 접근제어자도 사용이 가능하다.
+* 내부 클래스 중에서 스태틱 클래스만 static멤버를 가질 수 있다.
+* 다만 final과 static이 동시에 붙은 변수는 상수이므로 모든 내부 클래스에서 정의가 가능
+* 내부 클래스와 외부 클래스에 선언된 변수의 이름이 같을 때 변수 앞에 'this'또는 '외부 클래스명.this'를 붙여서 서로 구별할 수 있다.
+* 인스턴스클래스는 외부 클래스의 인스턴스멤버를 객체생성 없이 바로 사용할 수 있지만, 스태틱 클래스는 외부 클래스의 인스턴스 멤버를 객체생성 없이 사용할 수 없다.
+* 인스턴스클래스는 스태틱 클래스의 멤버들을 객체생성 없이 바로 사용할 수 있지만, 스태틱 클래스는 인스턴스 클래스의 멤버를 객체생성 없이 사용할 수 없다.
+* 인스턴스 클래스는 외부 클래스의 private멤버도 접근 가능하다.
+* 지역 클래스는 외부 클래스의 인스턴스 멤버와 static멤버를 모두 사용할 수 있으며, 메서드에 정의된 지역변수도 사용할 수 있다.
+* 단, final이 붙은 지역변수만 접근 가능한데, 메서드가 수행을 마쳐서 지역변수가 소멸된 시점에도, 지역클래스의 인스턴스가 소멸된 지역변수를 참조하려는 경우가 발생할 수 있기 때문이다.
+> JDK 1.8부터 지역 클래스에서 접근하는 지역 변수 앞에 final을 생략할 수 있게 바뀌었다. 컴파일러가 자동으로 붙여주는 것이라 해당 변수의 값이 바뀌는 문장이 있으면 컴파일 에러가 발생한다.
+
+```java
+class Outer {
+    class InstanceInner {
+        int iv = 100;
+    }
+
+    static class StaticInner {
+        int iv =200;
+        static int cv = 300;
+    }
+
+    void myMethod() {
+        class LocalInner {
+            int iv = 400;
+        }
+    }
+}
+
+public class InnerEx {
+    public static void main(String[] args) {
+        Outer oc = new Outer();	//인스턴스클래스의 인스턴스를 생성하려면 외부클래스의 인스턴스를 먼저 생성해야 한다.
+        Outer.InstanceInner ii = oc.new InstanceInner();
+
+        System.out.println("ii.iv =: " + ii.iv);
+        System.out.println("Outer.StaticInner.cv : " + Outer.StaticInner.cv);
+
+        //스태틱 내부클래스의 인스턴스는 외부 클래스를 먼저 생성하지 않아도 된다.
+        Outer.StaticInner si = new Outer.StaticInner();
+        System.out.println("si.iv : " + si.iv);
+    }
+}
+```
+* 컴파일 했을 때 생성되는 파일명은 '외부 클래스명$ 내부 클래스명.class'형식
+* 지역내부 클래스는 다른 메서드에 같은 이름의 내부 클래스가 존재할 수 있기 때문에 내부 클래스명 앞에 숫자가 붙는다.
+
+## 익명 클래스(anonymous class)
+*클래스의 선언과 객체의 생성을 동시에 하기 때문에 단 한번만 사용될 수 있고 오직 하나의 객체만을 생성할 수 있는 일회용 클래스*
+```java
+new 조상클래스이름() {
+	//멤버 선언
+}
+또는
+new 구현인터페이스이름() {
+	//멤버 선언
+}
+```
+* 이름이 없기 때문에 생성자도 가질 수 없으며, 조상클래스의 이름이나 구현하고자 하는 인터페이스의 이름을 사용해서 정의하기 때문에 오로지 단 하나의 클래스를 상속받거나 단 하나의 인터페이스만을 구현할 수 있다.
+* 익명 클래스는 이름이 없기 때문에 '외부 클래스명$숫자.class'의 형식으로 클래스파일명이 결정
