--- a/_posts/2020-12-28-1228-0103.md
+++ b/_posts/2020-12-28-1228-0103.md
@@ -110,3 +110,117 @@ try {
 ->  만일 예외처리를 필수로 해야 한다면, 참조 변수와 배열이 사용되는 모든 곳에 예외처리를 해줘야 할 것이다.
 
 **컴파일러가 예외처리를 확인하지 않는 RuntimeException클래스들은 'unchecked예외'라고 부르고, 예외처리를 확인하는 Exception클래스들은 'checked예외'라고 부른다.**
+
+## 1229
+# HTTP 기본
+*HTTP -  HyperText Transfer Protocol*
+
+* HTTP 메시지에 모든 것을 전송
+* HTML, Text, Image, 음성, 영상, 파일, JSON, XML (API),  등 거의 모든 형태의 데이터 전송 가능
+* 서버간에 데이터를 주고 받을 때도 대부분 HTTP 사용
+
+### HTTP 역사
+* HTTP/1.1: 가장 많이 사용하는 버전
+	* RFC2068(1997) -> RFC2616(1999) -> RFC7230~7235(2014)
+* HTTP/2 2015년: 성능 개선
+* HTTP/3 진행중: TCP 대신에 UDP 사용, 성능 개선
+
+### HTTP 특징
+1. 클라이언트 서버 구조
+2. 무상태 프로토콜(stateless), 비연결성
+3. HTTP 메시지
+4. 단순함, 확장 가능
+
+### 클라이언트 서버 구조
+* Request Response 구조
+* 클라이언트는 서버에 요청을 보내고, 응답을 대기
+* 서버가 요청에 대한 결과를 만들어서 응답  
+-> 클라이언트와 서버를 분리하여 클라이언트 측에서는 UI와 사용성, 서버 측에서는 비즈니스 로직과 데이터 로직을 담당하여 독립적으로 진화할 수 있다.
+
+## 무상태 프로토콜
+**스테이스리스(Stateless)**
+* 서버가 클라이언트의 상태를 보존X
+* 장점: 서버 확장성 높음(스케일 아웃)
+* 단점: 클라이언트가 추가 데이터 전송
+
+### Stateful, Stateless 차이
+**상태 유지 - Stateful**
+* 서버에서 클라이언트의 상태를 유지하여 항상 같은 서버가 유지되어야 한다.
+* 클라이언트 A는 계속 서버 1과 통신해야 하기 때문에 서버를 막 늘릴 수 없다.
+* 중간에 서버가 장애 난다면 유지했던 상태가 모두 사라지므로 처음부터 다시 요청해야 한다.
+
+**무상태 - Stateless**
+* 클라이언트가 서버에 요청할 때 데이터를 담아서 보내기 때문에 아무 서버나 호출해도 된다.
+* 서버에서 상태를 유지하지 않기 때문에 중간에 서버가 장애 나더라도 다른 서버에 다시 요청하여 응답을 받으면 된다.
+* 스케일 아웃 - 수평 확장에 유리
+
+### Stateless 실무 한계
+* 모든 것을 무상태로 설계 할 수 있는 경우도 있고 없는 경우도 있다.
+* 무상태
+	* ex) 로그인이 필요 없는 단순한 서비스 소개 화면
+* 상태 유지
+	* ex) 로그인
+* 로그인한 사용자의 경우 로그인 했다는 상태를 서버에 유지
+* 일반적으로 브라우저 쿠키와 서버 세션등을 사용해서 상태 유지
+* 상태 유지는 최소한만 사용
+* 정말 같은 시간에 딱 맞추어 발생하는 대용량 트래픽 ex)선착순 1000명 이벤트와 같은 수만명이 동시에 요청하는 업무에서는 어떻게든 머리를 쥐어짜서 stateless하게 설계해야 한다.
+
+## 비 연결성(connectionless)
+* 연결을 유지하는 모델은 클라이언트가 놀고 있어도 서버가 연결을 유지해서, 서버 자원이 소모된다.
+* 연결을 유지하지 않는 모델은 한 번 클라이언트와 서버가 요청/응답을 마치면 TCP/IP 연결을 종료한다.  
+-> 서버는 연결 유지X, 최소한의 자원 유지
+
+### 비 연결성 특징
+* HTTP는 기본이 연결을 유지하지 않는 모델
+* 일반적으로 초 단위의 이하의 빠른 속도로 응답
+* 1시간 동안 수천명이 서비스를 사용해도 실제 서버에서 동시에 처리하는 요청은 수십개 이하로 매우 작음
+	* 웹 브라우저에서 계속 연속해서 검색 버튼을 누르지는 않는다.
+* **서버 자원을 매우 효율적으로 사용할 수 있다.**
+
+### 비 연결성 한계와 극복
+* TCP/IP 연결을 새로 맺어야 함 - 3 way handshake 시간 추가
+* 웹 브라우저로 사이트를 요청하면 HTML 뿐만 아니라 자바스크립트, css, 추가 이미지 등 수 많은 자원이 함께 다운로드
+* HTTP 지속 연결(Persistent Connections)로 문제 해결  
+-> HTTP 초기에는 HTML, 자바스크립트, 이미지를 요청하게 되면 각각 연결 및 종료를 따로 해서  시간이 낭비되었는데, HTTP 지속 연결을 통해 연결 및 종료는 한 번만 하고 그 사이에 HTML, 자바스크립트, 이미지를 요청하고 응답받게 되었다.
+
+## HTTP 메시지
+**HTTP 메시지 구조**  
+
+
+
+start-line 시작 라인  
+header헤더  
+empty line 공백 라인 (CRLF)  
+message body
+
+### 시작 라인
+**요청 메시지**  
+request-line = **method** SP(공백) **request-target** SP **HTTP-version** CRLF(엔터)
+* HTTP 메서드
+	* 종류: GET, POST, PUT, DELETE...
+	* 서버가 수행해야 할 동작 지정
+* 요청 대상
+	* absolute-path[?query] (절대경로[?쿼리])
+	* 절대경로= "/"로 시작하는 경로
+* HTTP 버전
+
+**응답 메시지**  
+status-line = **HTTP-version** SP **status-code** SP **reason-phrase** CRLF
+* HTTP 버전
+* HTTP 상태 코드: 요청 성공, 실패를 나타냄
+	* 200: 성공
+	* 400: 클라이언트 요청 오류
+	* 500: 서버 내부 오류
+* 이유 문구: 사람이 이해할 수 있는 짧은 상태 코드 설명 글
+
+### HTTP 헤더
+header-field = field-name":" OWS field-value OWS	(OWS:띄워쓰기 허용)
+* field-name은 대소문자 구분 없음
+* HTTP 전송에 필요한 모든 부가정보 (metadata)  
+ex) 메시지 바디의 내용, 메시지 바디의 크기, 압축, 인증, 요청 클라이언트 정보, 캐시 관리 정보, 서버 애플리케이션 정보 등
+* 필요시 임의의 헤더 추가 가능   
+->  약속된 클라이언트와 서버만 이해
+
+### HTTP 메시지 바디
+* 실제 전송할 데이터
+* HTML 문서, 이미지, 영상, JSON 등등 byte로 표현할 수 있는 모든 데이터 전송 가능
