--- a/_posts/2020-12-28-1228-0103.md
+++ b/_posts/2020-12-28-1228-0103.md
@@ -387,3 +387,38 @@ class Circle implements Cloneable {
 2. `Class cObj = Card.class;             // 클래스 리터럴(*.class)로 부터 얻는 방법`
 3. `Class cObj = Class.forName("Card");  // 클래스 이름으로 부터 얻는 방법`  
 -> Class 객체를 이용하면 클래스에 대한 모든 정보를 얻을 수 있기 때문에 Class 객체를 통해 객체를 생성하고 메서드를 호출하는 등 보다 동적인 코드를 작성할 수 있다.
+
+## 1231
+*2020년을 마무리 하며...*
+
+
+2020년은 일도 많았고, 정신없이 지나가버렸다.  
+코로나 사태가 발생하기 전에 유럽여행도 두 번이나 다녀왔기에 미련없이 학업에만 집중할 수 있었다.
+
+### 인턴
+* 6개월간의 인턴생활을 통해 기업과 프로젝트에 대해서 많은 것을 경험하고 배웠다.
+* 휴학을 하고 진행한 것이 아니라 학점을 인정받고 진행한 학점연계형 인턴이어서 더 시간을 보람차게 보냈다고 생각한다.
+* 현직에서 근무하는 개발자들과 같이 프로젝트를 진행하며 시야를 넓히는 계기가 되었다.
+
+### 정보처리기사 자격증 취득
+* 인턴을 진행하면서 취득한 자격증이라 나에게 더 큰 결실로 다가오는 성과이다.
+* 매주 평일마다 9시부터 6시까지 근무를 하고 와서 저녁시간을 쪼개어 자격증 시험 준비를 하였다.
+* 시간을 쪼개어 활용하는 습관을 내 몸이 기억하게 되었다.
+
+### 우아한테크코스 도전, 그리고 실패
+* 전부터 눈여겨 보고 있던 우아한 형제들에서 진행하는 우테코에 지원했다.
+* 간절한 마음으로 자기소개서를 작성하고, 코딩테스트를 준비했지만 아쉽게도 떨어졌다.
+* 부족한 노력을 글로 포장하기에는 한계가 있었나보다. 이 때의 실패가 기름이 되어 나를 더 불타게 만들었다.
+
+### GIT 블로그 시작
+* '개발자스러움'이 무엇일까 고민하다가 처음으로 시도하게 되었다.
+* 매일 커밋하는 습관을 들이고, 커밋을 하기 위해 공부를 함으로써 좋은 순환이 될 것이라 생각했다.
+* 내가 공부한 내용을 다시 한 번 정리하면서 복습하고, 다시 찾을 수 있도록 기록해두었다.
+
+### 혼자하는 study, 함께하는 study
+* 최근에 와서 정보처리기사 자격증을 취득하고, 인턴생활도 종강과 함께 마무리하면서 새로운 도전을 하기로 했다.
+* 매일 혼자 공부하고, 주 3회씩 함께 공부하는 그룹을 만들어서 정보를 공유한다.
+* 아직 시작한 지 오래되지는 않았지만 결과가 성공적인 것 같다. 
+
+> 7월부터 마음을 다잡고 시작했기에 생각보다 적을 내용이 많지 않았다.
+2021년에는 이번 도전을 계기로 더 나아갈 수 있는 개발자가 되어야겠다고 다짐한다.
