--- a/_posts/2020-12-28-1228-0103.md
+++ b/_posts/2020-12-28-1228-0103.md
@@ -422,3 +422,13 @@ class Circle implements Cloneable {
 
 > 7월부터 마음을 다잡고 시작했기에 생각보다 적을 내용이 많지 않았다.
 2021년에는 이번 도전을 계기로 더 나아갈 수 있는 개발자가 되어야겠다고 다짐한다.
+
+## 0101
+### 2021년 목표
+* TIL 꾸준히 기록하며 성장하는 개발자 되기
+* 자바와 스프링 공부하고, 이를 사용하여 의미 있는 프로젝트 완성하기
+* 코딩테스트 준비하기
+* 원하는 기업에 지원해보고 그에 맞는 인재로 성장하기 위해 노력하기
+
+> 올해는 온전히 더 좋은 개발자가 되기 위한 한 해를 보내야겠다고 다짐했다.
+다른 것들을 뒤로 하고 한 길만 파는 만큼 2021년을 돌아보며 후회없도록 하겠다.
