--- a/_posts/2020-12-28-1228-0103.md
+++ b/_posts/2020-12-28-1228-0103.md
@@ -432,3 +432,106 @@ class Circle implements Cloneable {
 
 > 올해는 온전히 더 좋은 개발자가 되기 위한 한 해를 보내야겠다고 다짐했다.
 다른 것들을 뒤로 하고 한 길만 파는 만큼 2021년을 돌아보며 후회없도록 하겠다.
+
+## 0102
+# HTTP 메서드
+## API URI 설계
+*어떤 것이 좋은 URI 설계일까?*  
+-> 가장 중요한 것은 **리소스 식별**이다.
+
+* 회원을 등록하고 수정하고 조회하는게 리소스가 아니라 회원이라는 개념 자체가 리소스다.  
+-> 회원 리소스를 URI에 매핑
+* URI는 리소스를 판별하는데 써야한다.
+* 리소스와 해당 리소스를 대상으로 하는 행위를 분리
+	* 	리소스: 회원
+	* 행위: 조회, 등록, 삭제, 변경
+* 행위는 어떻게 구분? -> 메서드
+
+## HTTP 메서드
+### HTTP 메서드 종류 - 주요 메서드
+* GET - 리소스 조회
+* POST - 요청 데이터 처리, 주로 등록에 사용
+* PUT - 리소스를 대체, 해당 리소스가 없으면 생성
+* PATCH - 리소스 부분 변경
+* DELETE - 리소스 삭제
+
+### 기타 메서드
+* HEAD - GET과 동일하지만 메시지 부분을 제외하고, 상태 줄과 헤더만 반환
+* OPTIONS - 대상 리소스에 대한 통신 가능 옵션을 설명(주로 CORS에서 사용)
+* CONNECT - 대상 자원으로 식별되는 서버에 대한 터널을 설정
+* TRACE - 대상 리소스에 대한 경로를 따라 메시지 루프백 테스트를 수행
+
+### GET
+* 리소스 조회
+* 서버에 전달하고 싶은 데이터는 query(쿼리 스트링)를 통해서 전달
+* 메시지 바디를 사용해서 데이터를 전달할 수 있지만, 지원하지 않는 곳이 많아서 권장하지 않음
+
+### POST
+* 요청 데이터 처리
+* 메시지 바디를 통해 서버로 요청 데이터 전달
+* 서버는 요청 데이터를 처리
+* 주로 전달된 데이터로 신규 리소스 등록,  프로세스 처리에 사용
+* 예를 들어 /members로 들어오면 신규멤버로 등록하는 식으로 미리 약속한다.
+
+*요청 데이터를 어떻게 처리한다는 뜻일까?*
+* 예를 들어 POST는 다음과 같은 기능에 사용
+	* HTML 폼에 입력 된 필드와 같은 데이터 블록을 데이터 처리 프로세스에 제공
+	* 게시판, 블로그에 메시지 게시
+	* 서버가 아직 식별하지 않은 새 리소스 생성
+	* 기존 자원에 데이터 추가  
+
+
+**이 리소스 URI에 POST 요쳥이 오면 요청 데이터를 어떻게 처리할지 리소스마다 따로 정해야 함(정해진 것 x)**
+
+1. 새 리소스 생성(등록)
+	* 	서버가 아직 식별하지 않은 새 리소스 생성
+2. 요청 데이터 처리
+	* 단순히  데이터를 생성하건, 변경하는 것을 넘어서 프로세스를 처리해야 하는 경우
+	* ex) 주문에서 결제완료 -> 배달시작 -> 배달완료 처럼 단순히 값 변경을 넘어 프로세스 상태가 변경되는 경우
+	* POST의 결과로 새로운 리소스가 생성되지 않을 수도 있음
+	* 어쩔 수 없이 리소스의 행위를 포함시키는 경우가 생기기도 한다.
+	* 	ex) POST /orders/{orderId}/start-delivery (컨트롤 URI)
+3. 다른 메서드로 처리하기 애매한 경우
+	* ex) JSON으로 조회 데이터를 넘겨야 하는데, GET 메서드를 사용하기 어려운 경우
+
+### PUT
+* 리소스를 대체 (리소스가 있으면 대체, 없으면 생성)
+* 클라이언트가 리소스를 식별
+	* 클라이언트가 리소스 위치를 알고 URI 지정
+	* ex) PUT /members/100
+* 리소스를 수정하는게 아니라 완전히 덮어버린다.
+
+### PATCH
+* 리소스 부분 변경
+* patch가 지원되지 않는 서버도 있는데, 그럴 경우 POST 메서드를 사용한다.
+
+### DELETE
+* 리소스 제거 
+
+## HTTP 메서드의 속성
+* 안전(Safe Methods)
+* 멱등(Idempotent Methods)
+* 캐시가능(Cacheable Methods)
+
+### 안전
+* 호출해도 리소스를 변경하지 않는다.
+* 주요 메서드 중에서는 GET만 리소스를 변경하지 않고 조회만함으로 안전하다.
+
+### 멱등
+* 한 번 호출하든 여러 번 호출하든 결과가 똑같다.
+* GET, PUT, DELETE는 멱등
+* POST는 두 번 호출하면 같은 결제가 중복해서 발생할 수 있으므로 멱등이 아니다.
+* 멱등은 외부 요인으로 중간에 리소스가 변경되는 것 까지는 고려하지 않는다.
+
+*멱등 개념이 필요한 이유?*
+* 자동 복구 메커니즘
+* 서버가 TIMEOUT 등으로 정상 응답을 못주었을 때, 클라이언트가 같은 요청을 다시 해도 되는지 판단 근거
+
+### 캐시가능
+*응답 결과 리소스를 캐시해서 사용해도 되는가?*  
+* 스펙상 GET, POST, HEAD, PATCH 캐시 가능
+* 실제로는 GET, HEAD 정도만 캐시로 사용  
+-> POST, PATCH는 본문 내용까지 캐시 키로 고려해야 하는데, 구현이 쉽지 않음
+
+
+#http
