--- a/_posts/2021-01-04-0104-0110.md
+++ b/_posts/2021-01-04-0104-0110.md
@@ -4,7 +4,7 @@ tag: TIL
 category: TIL
 ---
 ## 0104
-## StringBuffer클래스와 StringBuilder클래스
+# StringBuffer클래스와 StringBuilder클래스
 
 
 *String클래스는 인스턴스를 생성할 때 지정된 문자열을 변경할 수 없지만 StringBuffer클래스는 변경이 가능*
@@ -65,3 +65,44 @@ System.out.println(sb2);	//abc123
 * 멀티쓰레드로 작성된 프로그램이 아닌 경우, StringBuffer의 동기화는 불필요하게 성능만 떨어트리게 된다.
 * 그래서 StringBuffer에서 쓰레드의 동기화만 뺀 StringBuilder가 새로 추가되었다.
 * 동기화를 제외하고는 StringBuilder와 StringBuffer는 완전히 똑같은 기능으로 작성되어 있다.
+
+## 0105
+# java.util.Random클래스
+* Math.random()외에도 Random클래스를 사용하면 난수를 얻을 수 있다.
+
+
+```java
+double randNum = Math.random();
+double randNum = new Random().nextDouble();	// 위의 문장과 동일
+
+int num = (int)(Math.random * 6) + 1;
+int num = new Random().nextInt(6) + 1;	    // 위의 문장과 동일
+```
+* Math.random()과 Random의 가장 큰 차이점은 종자값(seed)을 설정할 수 있다는 것이다.
+* 종자값이 같은 Random인스턴스들은 항상 같은 난수를 같은 순서대로 반환한다.
+
+### Random클래스의 생성자와 메서드
+* 생성자 Random()은 종자값을 System.currentTimeMillis()로 하기 때문에 실행할 때마다 얻는 난수가 달라진다.
+* 주로 사용하는 메서드는 double nextDouble (), int nextInt (int n)이 있다.
+* int nextInt (int n)는 0 ~ n의 범위에 있는 Int값을 반환한다. (n은 범위 포함 x)
+
+**Math.random()을 이용해서 실제 프로그래밍에 유용할만한 메서드**
+```java
+int getRand(int from, int to) {
+	return (int)(Math.random() * (Math.abs(to - from) + 1)) + Math.min(from, to);
+}		// from과 to범위의 정수 값을 반환한다. from과 to 모두 범위에 포함한다.
+
+int[] fillRand(int[] arr, int from, int to) {
+	for(int i=0; i<arr.length; i++) {
+		arr[i] = getRand(from, to);
+	}
+	return arr;
+}		// 배열 arr을 from과 to범위의 값들로 채워서 반환한다.
+
+int[] fillRand(int[] arr, int[] data) {
+	for(int i=0; i<arr.length; i++) {
+		arr[i] = data[getRand(0, data.length-1)];
+	}
+	return arr;
+}		// 배열 arr을 배열 data에 있는 값들로 채워서 반환한다.
+```
