0106 TIL, [자바의 정석] 10장 날짜와 시간 & 형식화 포스팅

--- a/_posts/2021-01-04-0104-0110.md
+++ b/_posts/2021-01-04-0104-0110.md
@@ -106,3 +106,49 @@ int[] fillRand(int[] arr, int[] data) {
 	return arr;
 }		// 배열 arr을 배열 data에 있는 값들로 채워서 반환한다.
 ```
+
+## 0106
+# 날짜와 시간
+
+
+
+## Calendar와 Date
+### Calendar와 GregorianCalendar
+*Canlendar는 추상클래스이기 때문에 직접 객체를 생성할 수 없고, 메서드를 통해서 완전히 구현된 클래스의 인스턴스를 얻어야 한다.*
+```java
+// getInstance() 메서드는 Calendar 클래스를 구현한 클래스의 인스턴스를 반환한다.
+Calendar cal = Calendar.getInstance();
+```
+* getInstance()는 시스템의 국가와 지역설정을 확인해서 태국을 제외하고는 GregorianCalendar의 인스턴스를 반환한다.
+
+### Date와 Calendar간의 변환
+1. Calendar를 Date로 변환
+```java
+Calendar cal = Calendar.getInstance();
+Date d = cal.getTime();
+```
+2. Date를 Calendar로 변환
+```java
+Date d = new Date();
+Calendar cal = Calendar.getInstance();
+cal.setTime(d);
+```
+
+* getInstance()를 통해서 얻은 인스턴스는 기본적으로 현재 시스템의 날짜와 시간에 대한 정보를 담고 있다.
+* `int get(int field)`는 원하는 필드의 값을 얻어오는 Calendar의 메서드이다.
+* `get(Calendar.MONTH)`로 얻어오는 값의 범위가 1에서 12가 아니라 0~11이라는 것을 주의해야 한다. 얻어오는 값이 0이면 1월을 의미한다.
+* get메서드의 매개변수로 사용되는 Int값들은 Calendar에 정의된 static상수이다.
+* 날짜와 시간을 원하는 값으로 변경하려면 set메서드를 사용하면 된다.
+```java
+void set(int field, int value)
+void set(int field, int value, int date)
+void set(int field, int value, int date, int hourOfDay, int minute)
+void set(int field, int value, int date, int hourOfDay, int minute, int second)
+```
+* 두 날짜간의 차이를 구하기 위해서는 두 날짜를 최소단위인 초단위로 변경한 다음 그 차이를 구하면 된다.
+	* 	getTimeInMillis()는 1/1000초 단위로 값을 반환하기 때문에 초단위로 얻기 위해서는 1000으로 나눠 주어야 한다.
+	* 일단위로 얻기 위해서는 24*60*60*1000으로 나누어야 한다.
+* `add(int field, int amount)`를 사용하면 지정한 필드의 값을 원하는 만큼 증가 또는 감소 시킬 수 있다.
+	* 이를 이용해서 특정 날짜 또는 시간을 기점으로 해서 일정기간 전후의 날짜와 시간을 알아낼 수 있다.
+	* 다음 달의 1일에서 하루를 빼면 이번 달의 마지막 일을 알 수 있다.
+* `roll(int field, int amount)`도 지정한 필드의 값을 증가 또는 감소시킬 수 있는데, add 메서드와의 차이점은 다른 필드에 영향을 미치지 않는다는 것이다.
