--- a/_posts/2021-01-04-0104-0110.md
+++ b/_posts/2021-01-04-0104-0110.md
@@ -152,3 +152,121 @@ void set(int field, int value, int date, int hourOfDay, int minute, int second)
 	* 이를 이용해서 특정 날짜 또는 시간을 기점으로 해서 일정기간 전후의 날짜와 시간을 알아낼 수 있다.
 	* 다음 달의 1일에서 하루를 빼면 이번 달의 마지막 일을 알 수 있다.
 * `roll(int field, int amount)`도 지정한 필드의 값을 증가 또는 감소시킬 수 있는데, add 메서드와의 차이점은 다른 필드에 영향을 미치지 않는다는 것이다.
+
+## 0107
+# 컬렉션 프레임웍(Collections Framework)
+*데이터 군을 저장하는 클래스들을 표준화한 설계*
+
+## 컬렉션 프레임웍의 핵심 인터페이스
+ *컬렉션 프레임웍에서는 컬렉션을 다루는데 필요한 기능을 가진 3개의 인터페이스를 정의하였다.*  
+-> **List, Set, Hash**
+* List와 Set의 공통된 부분을 다시 뽑아서 새로운 인터페이스인 Collection을 추가로 정의하였다.
+* Map인터페이스는 이들과는 전혀 다른 형태로 컬렉션을 다루기 때문에 같은 상속계층도에 포함되지 못했다.
+* 컬렉션 프레임웍의 모든 컬랙션 클래스들은 List, Set, Map 중의 하나를 구현하고 있다.
+
+### Collection 인터페이스
+*Collection인터페이스는 컬렉션 클래스에 저장된 데이터를 읽고, 추가하고 삭제하는 등 컬렉션을 다루는데 가장 기본적인 메서드들을 정의하고 있다.*
+* `boolean add(Object o), boolean addAll(Collection c)`  
+-> 저장된 객체 또는 Collection의 객체들을 Collection에 추가한다.
+* `void clear()`  
+-> Collection의 모든 객체를 삭제한다.
+* `boolean contains(Object o), boolean containsAll(Collection c)`  
+-> 저장된 객체 또는 Collection의 객체들이 Collection에 포함되어 있는지 확인한다.
+* `boolean equals(Object o)`  
+-> 동일한 Collection인지 비교한다. 
+* `int hashCode()`  
+-> Collection의 hash code를 반환한다.
+* `boolean isEmpty()`  
+-> Collection이 비어있는지 확인한다.
+* `Iterator iterator()`  
+-> Collection의 Iterator를 얻어서 반환한다.
+* `boolean remove(Object o)`   
+-> 저장된 객체를 삭제한다.
+* `boolean removeAll(Collection c)`  
+-> 지정된 Collection에 포함된 객체들을 삭제한다.
+* `boolean retainAll(Collection c)`  
+-> 지정된 Collection에 포함된 객체만을 남기고 다른 객체들은 삭제한다. 이 작업으로 인해 변화가 있으면 true를 반환한다.
+* `int size()`  
+-> Collection에 저장된 객체의 개수를 반환한다.
+* `Object[] toArray()`  
+-> Collection에 저장된 객체를 객체배열(Object[])로 반환한다.
+* `Object[] toArray(Object[] a)`  
+-> 지정된 배열에 Collection의 객체를 저장해서 반환한다.
+
+
+### List인터페이스
+**List인터페이스는 중복을 허용하면서 저장순서가 유지되는 컬렉션을 구현하는데 사용된다.**  
+ex) ArrayList, LinkedList  
+* `void add(int index, Object element), boolean addAll(int index, Collection c)`  
+-> 지정된 위치에 객체 또는 컬렉션에 포함된 객체들을 추가한다.
+* `Object get(int index)`  
+-> 지정된 위치에 있는 객체를 반환한다.
+* `int indexOf(Object o)`  
+-> 지정된 객체의 위치를 반환한다.  (순방향으로 찾는다.)
+* `int lastIndexOf(Object o)`  
+-> 지정된 객체의 위치를 반환한다. (역방향으로 찾는다.
+* `ListIterator listIterator(), ListIterator listIterator(int index)`  
+-> List의 객체에 접근할 수 있는 ListIterator을 반환한다.
+* `Object remove(int index)`  
+-> 지정된 위치에 있는 객체를 삭제하고 삭제된 객체를 반환한다.
+* `Object set(int index, Object element)`  
+-> 지정된 위치에 객체를 저장한다.
+* `void sort(Comparator c)`  
+-> 지정된 비교자로 List를 정렬한다.
+* `List subList(int fromIndex, int toIndex)`  
+-> 지정된 범위에 있는 객체를 반환한다.
+
+### Set인터페이스
+**Set인터페이스는 중복을 허용하지 않고 저장순서가 유지되지 않는 컬렉션 클래스를 구현하는데 사용된다.**  
+ex) HashSet, TreeSet
+* Set인터페이스의 메서드는 Collection인터페이스와 동일하다.
+
+### Map인터페이스
+**Map인터페이스는 키와 값을 하나의 쌍으로 묶어서 저장하는 컬렉션 클래스를 구현하는 데 사용된다.**  
+ex) HashMap, TreeMap
+* 키는 중복될 수 없지만 값의 중복을 허용한다.
+* 기존에 저장된 데이터와 중복된 키와 값을 저장하면 기존의 값은 없어지고 마지막에 저장된 값이 남게 된다.
+* `void clear()`  
+-> Map의 모든 객체를 삭제한다.
+* `boolean containsKey(Object key)`  
+-> 지정된 key객체와 일치하는 Map의 key객체가 있는지 확인한다.
+* `boolean containsValue(Object value)`  
+-> 지정된 value객체와 일치하는 Map의 value객체가 있는지 확인한다.
+* `Set entrySet()`  
+-> Map에 저장되어 있는 Key-value쌍을 Map.Entry타입의 객체로 저장한 Set으로 반환한다.
+* `boolean equals(Object o)`  
+-> 동일한 Map인지 비교한다.
+* `Object get(Object key)`  
+-> 지정한 key객체에 대응하는 value객체를 찾아서 반환한다.
+* `int hashCode()`  
+-> 해시코드를 반환한다.
+* `boolean isEmpty()`  
+-> Map이 비어있는지 확인한다.
+* `Set keySet()`  
+-> Map에 저장된 모든 key객체를 반환한다. Key는 중복을 허용하지 않기 때문에 Set으로 반환한다.
+* `Object put(Object key, Object value)`   
+-> Map에 value객체를 key객체에 연결하여 저장한다.
+* `void putAll(Map t)`  
+-> 지정된 Map의 모든 key-value쌍을 추가한다.
+* `Object remove(Object key)`  
+-> 지정된 key객체와 일치하는 key-value객체를 삭제한다.
+* `int size()`  
+-> Map에 저장된 key-value쌍의 개수를 반환한다.
+* `Collection values()`  
+-> Map에 저장된 모든 value객체를 반환한다. 값은 중복을 허용하기 때문에 Collection타입으로 반환 가능하다.
+
+### Map.Entry인터페이스
+* Map인터페이스의 내부 인터페이스이다.
+* Map에 저장되는 key-value쌍을 다루기 위해 내부적으로 Entry인터페이스를 정의한 것이다.
+* Map인터페이스를 구현하는 클래스에서는 Map.Entry인터페이스도 함께 구현해야한다.
+
+* `boolean equals(Object o)`   
+-> 동일한 Entry인지 비교한다.
+* `Object getKey()`  
+-> Entry의 key객체를 반환한다.
+* `Object getValue()`  
+-> Entry의 value객체를 반환한다.
+* `int hashCode()`  
+-> Entry의 해시코드를 반환한다.
+* `Object setValue(Object value)`   
+-> Entry의 value객체를 지정된 객체로 바꾼다.
