--- a/_posts/2021-01-04-0104-0110.md
+++ b/_posts/2021-01-04-0104-0110.md
@@ -270,3 +270,97 @@ ex) HashMap, TreeMap
 -> Entry의 해시코드를 반환한다.
 * `Object setValue(Object value)`   
 -> Entry의 value객체를 지정된 객체로 바꾼다.
+
+## 0108
+## ArrayList
+*ArrayList는 List인터페이스를 구현하기 때문에 데이터의 저장순서가 유지되고 중복을 허용한다는 특징을 갖는다.*
+
+* ArrayList는 Object배열을 이용해서 데이터를 순차적으로 저장한다.
+* 배열에 더 이상 저장할 공간이 없으면 보다 큰 새로운 배열을 생성해서 기존의 배열에 저장된 내용을 새로운 배열로 복사한 다음에 저장한다.  
+-> 크기를 적절하게 정해줘야한다.
+
+### ArrayList의 생성자와 메서드 - List와 Collection인터페이스로부터 받는 메서드 제외
+* `void ensureCapacity(int minCapacity)`  
+-> ArrayList의 용량이 최소한 minCapacity가 되도록 한다.
+* `void trimToSize()`  
+-> 용량을 크기에 맞게 줄인다.
+
+```java
+for(int i = list2.size()-1; i >= 0; i--) {
+	if(list1.contains(list2.get(i))	 //list2에서 list1과 공통되는 요소들을 찾아서 삭제
+		list2.remove(i);
+}
+```
+* for문의 변수 i를 0부터 증가시킨 것이 아니라, 'list2.size()-1'부터 감소시키면서 거꾸로 반복시켰다.
+* 변수 i를 증가시켜가면서 삭제하면, 한 요소가 삭제될 때마다 빈 공간을 채우기 위해 나머지 요소들이 자리이동을 하기 때문에 올바른 결과를 얻을 수 없다.
+
+* ArrayList를 생성할 때, 저장할 요소의 개수를 고려해서 실제 저장할 개수보다 약간 여유있는 크기로 하는 것이 좋다.  
+-> 생설할 때 지정한 크기보다 더 많은 객체를 저장하면 자동적으로 크기가 늘어나기는 하지만 처리시간이 많이 소요되기 때문이다.
+* ArrayList나 Vector같이 배열을 이용한 자료구조는 데이터를 읽어오고 저장하는 데는 효율이 좋지만, 용량을 변경해야할 때는 새로운 배열을 생성한 후 기존의 배열로부터 복사해야하기 때문에 상당히 효율이 떨어진다는 단점을 가지고 있다.
+
+**배열에 객체를 순차적으로 저장할 때와 객체를 마지막에 저장된 것부터 삭제하면 System.arraycopy()를 호출하지 않기 때문에 작업시간이 짧다.**
+
+
+
+## LinkedList
+### 배열의 단점
+1. 크기를 변경할 수 없다.
+	* 크기를 변경할 수 없으므로 새로운 배열을 생성해서 데이터를 복사해야한다.
+	* 실행속도를 향상시키기 위해서는 충분히 큰 크기의 배열을 생성해야 하므로 메모리가 낭비된다.
+2. 비순차적인 데이터의 추가 또는 삭제에 시간이 많이 걸린다.
+	* 배열의 중간에 데이터를 추가하려면, 빈자리를 만들기 위해 다른 데이터들을 복사해서 이동해야 한다.
+
+
+
+-> 이러한 배열의 단점을 보완하기 위한 **링크드 리스트(linked list)**
+* 배열은 모든 데이터가 연속적으로 존재하지만 링크드 리스트는 불연속적으로 존재하는 데이터를 서로 연결한 형태로 구성되어 있다.
+* 링크드 리스트의 각 요소(node)들은 자신과 연결된 다음 요소에 대한 참조와 데이터로 구성되어 있다.
+```java
+class Node {
+	Node next;	//다음 요소의 주소를 저장
+	Object obj; 	//데이터를 저장
+}
+```
+* 링크드 리스트에서의 데이터 삭제는 삭제하고자 하는 요소의 이전요소가 삭제하고자 하는 요소의 다음 요소를 참조하도록 변경하기만 하면 된다.
+* 단 하나의 참조만 변경하면 삭제가 이루어지기 때문에 처리속도가 매우 빠르다.
+* 새로운 데이터를 추가할 때는 새로운 요소를 생성한 다음 이전 요소의 참조를 새로운 요소에 대한 참조로 변경해주고, 새로운 요소가 그 다음 요소를 참조하도록 변경하기만 하면 되므로 처리속도가 매우 빠르다.
+* 링크드 리스트는 이동방향이 단방향이기 때문에 다음 요소에 대한 접근은 쉽지만 이전 요소에 대한 접근은 어렵다.
+
+-> 이 점을 보완한 것이 **더블 링크드 리스트(이중 연결리스트)**
+* 더블 링크드 리스트는 링크드 리스트에 참조변수를 하나 더 추가하여 다음 요소에 대한 참조뿐 아니라 이전 요소에 대한 참조가 가능하도록 했을 뿐, 그 외에는 링크드리스트와 같다.
+```java
+class Node {
+	Node next;	 //다음 요소의 주소를 저장
+	Node previous; //이전 요소의 주소를 저장
+	Object obj; 	 //데이터를 저장
+}
+```
+
+-> 더블 링크드 리스트의 접근성을 보다 향상시킨 것이 **더블 써큘러 링크드 리스트(이중 원형 연결리스트)**인데, 단순히 더블 링크드 리스트의 첫 번째 요소와 마지막 요소를 연결시킨 것이다.
+
+**LinkedList클래스는 이름과 달리 '링크드 리스트'가 아닌 '더블 링크드 리스트'로 구현되어 있는데, 이는 링크드 리스트의 단점인 낮은 접근성을 높이기 위한 것**
+
+### LinkedList의 생성자와 메서드
+* List와 Collection인터페이스를 구현하면서 추가된 메서드와 Queue인터페이스와 Deque인터페이스를 구현하면서 추가된 메서드들로 이루어져 있다.
+* LinkedList 역시 List인터페이스를 구현했기 때문에 ArrayList와 내부구현방법만 다를 뿐 제공하는 메서드의 종류와 기능은 거의 같다.
+
+### ArrayList와 LinkedList비교
+1. 순차적으로 추가/삭제하는 경우에는 ArrayList가 LinkedList보다 빠르다.
+	* 만일 ArrayList의 크기가 충분하지 않으면, 새로운 크기의 ArrayList를 생성하고 데이터를 복사하는 일이 발생하게 되므로 순차적으로 데이터를 추가해도 LinkedList가 더 빠를 수 있다.
+	* ArrayList는 마지막 데이터부터 삭제할 경우 마지막 요소의 값을 null로만 바꾸면 되어서 상당히 빠르다.
+2. 중간 데이터를 추가/삭제하는 경우에는 LinkedList가 ArrayList보다 빠르다.
+	* 중간 요소를 추가 또는 삭제하는 경우, LinkedList는 각 요소간의 연결만 변경해주면 되기 때문에 처리속도가 상당히 빠르다.
+	* ArrayList는 각 요소들을 재배치하여 추가할 공간을 확보하거나 빈 공간을 채워야하기 때문에 처리속도가 늦다.  
+-> 데이터의 개수가 그리 크지 않다면 어느 것을 사용해도 큰 차이가 나지는 않는다.
+3. 데이터를 읽는 경우에는 ArrayList가 LinkedList보다 빠르다.
+	* 배열은 각 요소들이 연속적으로 메모리상에 존재하기 때문에 간단한 계산만으로 원하는 요소의 주소를 얻어서 저장된 데이터를 곧바로 읽어올 수 있다.
+		* 인덱스가 n인 데이터의 주소 = 배열의 주소 + n * 데이터 타입의 크기
+	* LinkedList는 불연속적으로 위치한 각 요소들이 서로 연결된 것이라 처음부터 n번째 데이터까지 차례대로 따라가야만 원하는 값을 얻을 수 있다.
+	* LinkedList는 저장해야하는 데이터의 개수가 많아질수록 데이터를 읽어 오는 시간, 즉 접근시간이 길어진다는 단점이 있다.
+
+
+다루고자 하는 데이터의 개수가 변하지 않는 경우 -> **ArrayList**  
+데이터 개수의 변경이 잦은 경우 -> **LinkedList**
+
+* 두 클래스의 장점을 이용해서 클래스를 조합해서 사용하는 방법도 생각해 볼 수 있다.  
+-> 처음 작업하기 전에 데이터 저장할 때는 ArrayList를 사용하고, 작업할 때는 LinkedList로 데이터를 옮겨서 작업하면 좋은 효율을 얻을 수 있다.
