--- a/_posts/2021-01-04-0104-0110.md
+++ b/_posts/2021-01-04-0104-0110.md
@@ -364,3 +364,18 @@ class Node {
 
 * 두 클래스의 장점을 이용해서 클래스를 조합해서 사용하는 방법도 생각해 볼 수 있다.  
 -> 처음 작업하기 전에 데이터 저장할 때는 ArrayList를 사용하고, 작업할 때는 LinkedList로 데이터를 옮겨서 작업하면 좋은 효율을 얻을 수 있다.
+
+## 0109
+## java.util.Objects클래스
+*Object클래스의 보조 클래스로 Math클래스처럼 모든 메서드가 'static'이다. 객체의 비교나 널 체크에 유용하다.*
+
+* isNull()은 객체가 null이면 true를 반환하고, 아니면 false를 반환한다. nonNull()은 정반대의 일을 한다.
+* requireNonNull()은 해당 객체가 널이 아니어야 하는 경우에 사용한다. 만일 객체가 널이면, NullPointerException을 발생시킨다. 두 번째 매개변수로 지정하는 문자열은 예외의 메시지가 된다.
+* compare()는 두 비교대상이 같으면 0, 크면 양수, 작으면 음수를 반환한다. 두 객체를 비교하는데 사용할 비교 기준이 필요하다. 그 역할을 하는 것이 Comparator이다.
+* Objects클래스에서 정의된 equals()는 null검사를 하지 않아도 된다는 장점이 있다.  
+-> equals()의 내부에서 a와 b의 널 검사를 하기 때문이다.
+* 두 2차원 문자열 배열을 비교할 때, deepEquals()를 쓰면 간단하게 해결할 수 있다.
+* toString()도 equals()처럼, 내부적으로 널 검사를 한다. 널이라면 두 번째 매개변수를 대신 사용할 값으로 지정할 수 있다.
+* hashCode()역시 내부적으로 널 검사를 한 후에 Object클래스의 hashCode()를 호출할 뿐이다. 단, 널일 때는 0을 반환한다.
+* static import문을 사용해도 Object클래스의 메서드와 이름이 같은 것들은 충돌이 난다. 즉, 컴파일러가 구별을 못한다.  
+-> 클래스의 이름을 붙여줄 수밖에 없다.
