--- a/_posts/2021-01-04-0104-0110.md
+++ b/_posts/2021-01-04-0104-0110.md
@@ -379,3 +379,59 @@ class Node {
 * hashCode()역시 내부적으로 널 검사를 한 후에 Object클래스의 hashCode()를 호출할 뿐이다. 단, 널일 때는 0을 반환한다.
 * static import문을 사용해도 Object클래스의 메서드와 이름이 같은 것들은 충돌이 난다. 즉, 컴파일러가 구별을 못한다.  
 -> 클래스의 이름을 붙여줄 수밖에 없다.
+
+## 0110
+## 정규식 - java.util.regex패키지
+*정규식이란 텍스트 데이터 중에서 원하는 조건(패턴, pattern)과 일치하는 문자열을 찾아내기 위해 사용하는 것으로 미리 정의된 기호와 문자를 이용해서 작성한 문자열을 말한다.*
+
+**Pattern** - 정규식을 정의하는데 사용  
+**Matcher** - 정규식을 데이터와 비교하는 역할
+
+
+```java
+String[] data = {"bat", "baby", "bonus", "cA", "ca", "co", "c.", "c0", "car", "combat", "count", "data", "disc"};
+Pattern p = Pattern.compile("c[a-z]*");	// c로 시작하는 소문자영단어
+
+for (int i=0; i<data.length; i++) {
+	Matcher m = p.matcher(date[i]);
+	if(m.matches())
+		System.out.print(data[i] + ", ");	//결과 : ca, co, car, combat, count,
+```
+1. 정규식을 매개변수로 Pattern클래스의 static메서드인 Pattern compile(String regex)을 호출하여 Pattern인스턴스를 얻는다.  
+`Pattern p = Pattern.compile("c[a-z]*");`
+2. 정규식으로 비교할 대상을 매개변수로 Pattern클래스의 Matcher matcher(CharSequence input)를 호출해서 Matcher인스턴스를 얻는다.  
+`Matcher m = p.matcher(data[i]);`
+3. Matcher인스턴스에 boolean matches()를 호출해서 정규식에 부합하는지 확인한다.  
+`if(m.matches())x`
+
+### 자주 쓰일 만한 패턴들
+* `c[a-z]*`  
+-> c로 시작하는 영단어
+* `c[a-z]`  
+-> c로 시작하는 두 자리 영단어
+* `c[a-zA-Z]`  
+-> c로 시작하는 두 자리 영단어 (a~z 또는 A~Z, 즉 대소문자 구분안함)
+* `c[a-zA-Z-0-9], c\w`  
+-> c로 시작하고 숫자와 영어로 조합된 두 글자 
+* `.*`  
+-> 모든 문자열
+* `c.`  
+-> c로 시작하는 두 자리 문자열
+* `c.*`  
+-> c로 시작하는 모든 문자열
+* `c\.`  
+-> c.와 잋리하는 문자열'.'은 패턴작성에 사용되는 문자이므로 escape문자인 '\'를 사용해야한다.
+* `c\d, c[0-9]`  
+-> c와 숫자로 구성된 두 자리 문자열
+* `c.*t`  
+-> c로 시작하고 t로 끝나는 모든 문자열
+* `[b|c].*, [bc].*, [b-c].*`  
+-> b나 c로 시작되는 문자열
+* `^[b|c].*, ^[bc].*, ^[b-c].*`  
+-> b나 c로 시작되지 않는 문자열
+* `.*a.*`  
+-> a를 포함하는 모든 문자열. *는 0 또는 그 이상의 문자
+* `.*a.+`  
+-> a를 포함하는 모든 문자열. +는 1 또는 그 이상의 문자. +는 *과 달리 반드시 하나 이상의 문자가 있어야 하므로 a로 끝나는 단어는 포함되지 않음
+* `[b|c].{2}`  
+-> b나 c로 시작되는 세 자리 문자열
