--- a/_posts/2021-01-12-0111-0117.md
+++ b/_posts/2021-01-12-0111-0117.md
@@ -7,7 +7,7 @@ category: TIL
 # 새로운 프로젝트
 
 
-오늘부터 정부과제 프로젝트에 참여하여 풀스택 영역을 개발하기로 했다.  
+오늘부터 인공지능 포털 사이트 개발 프로젝트에 참여하여 풀스택 영역을 다루기로 했다.  
 우선 백엔드 API개발부터 시작하였다.
 
 ---
@@ -16,3 +16,66 @@ category: TIL
 * 스토리 보드를 참조하여 내가 할 일을 정하고, 어떻게 구현할지 고민했다.
 * 개발 환경을 구축하고, 서버를 올리는 데 성공하였다.
 * 스프링 부트에 대한 정보를 찾아보며 기본적인 흐름에 대해 이해하였다.
+
+## 0112
+* 회원과 관련된 API 개발을 맡아서 하게 되었다.
+* 회원가입과 회원탈퇴하는 API를 생성했다.
+* 회원가입 시 비밀번호를 SHA-256을 이용하여 암호화 해서 DB에 저장하였다.
+
+```java
+public class SHA256Util {
+    /**
+     * SHA-256 암호화 함
+     * @param source 원본
+     * @param salt(String) SALT 값
+     * @return
+     */
+    public static String getEncrypt(String source, String salt) {
+        return getEncrypt(source, salt.getBytes());
+    }
+
+    /**
+     * SHA-256 암호화 함
+     * @param source 원본
+     * @param salt(byte[]) SALT 값
+     * @return
+     */
+    public static String getEncrypt(String source, byte[] salt) {
+
+        String result = "";
+
+        byte[] a = source.getBytes();
+        byte[] bytes = new byte[a.length + salt.length];
+
+        System.arraycopy(a, 0, bytes, 0, a.length);
+        System.arraycopy(salt, 0, bytes, a.length, salt.length);
+
+        try {
+            // 암호화 방식 지정 메소드
+            MessageDigest md = MessageDigest.getInstance("SHA-256");
+            md.update(bytes);
+
+            byte[] byteData = md.digest();
+
+            StringBuffer sb = new StringBuffer();
+            for (int i = 0; i < byteData.length; i++) {
+                sb.append(Integer.toString((byteData[i] & 0xFF) + 256, 16).substring(1));
+            }
+
+            result = sb.toString();
+        } catch (NoSuchAlgorithmException e) {
+            e.printStackTrace();
+        }
+
+        return result;
+    }
+}
+
+//사용
+        String password = user.getPassword();
+        password = SHA256Util.getEncrypt(password, salt);
+
+        user.setPassword(password);
+```
+
+**처음으로 실제 프로젝트에서 사용하는 API를 개발하다보니 생각보다 고민해야 할 부분도 많았고, 코딩을 하기 전에 설계 측면에서 더 깊게 생각해야 한다는 것을 느꼈다.**
