--- a/_posts/2021-01-12-0111-0117.md
+++ b/_posts/2021-01-12-0111-0117.md
@@ -79,3 +79,46 @@ public class SHA256Util {
 ```
 
 **처음으로 실제 프로젝트에서 사용하는 API를 개발하다보니 생각보다 고민해야 할 부분도 많았고, 코딩을 하기 전에 설계 측면에서 더 깊게 생각해야 한다는 것을 느꼈다.**
+
+## 0113
+* 비즈니스 형식으로 이메일을 작성해보고 이를 이용해 정보를 공유했다.
+* 로그인 시 쿠키를 생성해서 필요한 정보들을 쿠키에 저장하였다.
+* 그리고 쿠키를 이용해서 백엔드 로직을 구현하였다.
+```java
+ Cookie[] loginCookies = new Cookie[4];  // 쿠키 설정
+loginCookies[0] = new Cookie("email", login.getEmail());
+loginCookies[1] = new Cookie("userNo", login.getUserNo() + "");
+loginCookies[2] = new Cookie("userGbCode", login.getUserGbCode());
+loginCookies[3] = new Cookie("userName", login.getUserName());
+
+for (Cookie c : loginCookies) {
+    c.setPath("/");
+    c.setMaxAge(-1);
+    response.addCookie(c);
+}
+
+ //쿠키정보를 체크해서 회원인지를 확인한다. user.email과 쿠키에 있는 이메일이 같은지 확인하다.
+        Cookie[] cookies = request.getCookies();
+        if(cookies != null) {
+            for(Cookie c : cookies){
+                if ("email".equals(c.getName())) {
+                    cookieEmail = c.getValue();
+                }
+            }
+        }
+        int emailCnt = userService.dupEmail(user);
+        if (emailCnt > 0) {
+            if(user.getEmail() == cookieEmail) {
+                //회원탈퇴처리
+                userService.withdraw(user);
+                //회원탈퇴가 제대로 처리 되면 쿠키를 삭제한다.
+                if (cookies != null) { // 쿠키가 한개라도 있으면 실행
+                    for (Cookie c : cookies) {
+                        c.setMaxAge(0); // 유효시간을 0으로 설정
+                        c.setPath("/");
+                        response.addCookie(c); // 응답 헤더에 추가
+                    }
+                }
+            }
+        }
+```
