--- a/_posts/2021-01-12-0111-0117.md
+++ b/_posts/2021-01-12-0111-0117.md
@@ -84,6 +84,7 @@ public class SHA256Util {
 * 비즈니스 형식으로 이메일을 작성해보고 이를 이용해 정보를 공유했다.
 * 로그인 시 쿠키를 생성해서 필요한 정보들을 쿠키에 저장하였다.
 * 그리고 쿠키를 이용해서 백엔드 로직을 구현하였다.
+
 ```java
  Cookie[] loginCookies = new Cookie[4];  // 쿠키 설정
 loginCookies[0] = new Cookie("email", login.getEmail());
@@ -97,28 +98,36 @@ for (Cookie c : loginCookies) {
     response.addCookie(c);
 }
 
- //쿠키정보를 체크해서 회원인지를 확인한다. user.email과 쿠키에 있는 이메일이 같은지 확인하다.
-        Cookie[] cookies = request.getCookies();
-        if(cookies != null) {
-            for(Cookie c : cookies){
-                if ("email".equals(c.getName())) {
-                    cookieEmail = c.getValue();
-                }
+//쿠키정보를 체크해서 회원인지를 확인한다. user.email과 쿠키에 있는 이메일이 같은지 확인하다.
+Cookie[] cookies = request.getCookies();
+if(cookies != null) {
+    for(Cookie c : cookies){
+        if ("email".equals(c.getName())) {
+            cookieEmail = c.getValue();
+        }
+    }
+}
+int emailCnt = userService.dupEmail(user); //DB에 이메일이 존재하면 1, 없으면 0 반환
+if (emailCnt > 0) {
+    if(user.getEmail() == cookieEmail) {
+        //회원탈퇴처리
+        userService.withdraw(user);
+        //회원탈퇴가 제대로 처리 되면 쿠키를 삭제한다.
+        if (cookies != null) { // 쿠키가 한개라도 있으면 실행
+            for (Cookie c : cookies) {
+                c.setMaxAge(0); // 유효시간을 0으로 설정
+                c.setPath("/");
+                response.addCookie(c); // 응답 헤더에 추가
             }
         }
-        int emailCnt = userService.dupEmail(user);
-        if (emailCnt > 0) {
-            if(user.getEmail() == cookieEmail) {
-                //회원탈퇴처리
-                userService.withdraw(user);
-                //회원탈퇴가 제대로 처리 되면 쿠키를 삭제한다.
-                if (cookies != null) { // 쿠키가 한개라도 있으면 실행
-                    for (Cookie c : cookies) {
-                        c.setMaxAge(0); // 유효시간을 0으로 설정
-                        c.setPath("/");
-                        response.addCookie(c); // 응답 헤더에 추가
-                    }
-                }
-            }
-        }
+    }
+}
 ```
+
+**쿠키는 이전에도 학습했던 적이 있는데, 직접 프로젝트에 사용해보니 조금 더 이해가 잘 되었다. 쿠키를 이용해서 API에 접근하는 권한을 확인하였다.**
+
+## 0114
+* 오늘은 스스로 여러가지 상황을 생각해서 오류 코드를 작성하였다.
+* API를 작성하는데 기본이 되는 연동규격 정의서를 작성하고, 그에 맞게 API를 개발하였다.
+* 직접 돌아가는 코드를 확인하고, 테스트를 시도하여 회원의 기본적인 CRUD를 할 수 있도록 설계 및 개발하였다.
+* 로그인 시 쿠키를 생성할 때, 'UTF-8'형식으로 인코딩하여 디코딩 시 예상한 결과가 출력되도록 코딩하였다.
